--- a/pwm/servlet/src/password/pwm/config/Display_de.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_de.properties
@@ -26,12 +26,17 @@ Field_Location=Standort
 Field_OldPassword=Altes Passwort
 Field_NewPassword=Neues Passwort
 Field_ConfirmPassword=Passwort best\u00e4tigen
+Field_User_Supplied_Question=Frage
+Field_Option_Select=Wahl eine Frage
+Field_CurrentPassword=Heutiges Passwort
 
 Button_Login=Anmelden
 Button_Reset=L\u00f6schen
 Button_ChangePassword=Passwort \u00e4ndern
 Button_Hide=Ausblenden
 Button_Show=Einblenden
+# Button_Hide_Responses=Hide Responses
+# Button_Show_Responses=Show Responses
 Button_SetResponses=Hinweise eingeben
 Button_Search=Suchen
 Button_RecoverPassword=Hinweis pr\u00fcfen
@@ -39,6 +44,14 @@ Button_Create=Erzeugen
 Button_Activate=Aktivieren
 Button_Continue=Weiter
 Button_CloseWindow=Fenster schlie\u00dfen
+Button_Update=Aktualisieren
+Button_Verify=\u00dcberpr\u00fcfen
+# Button_UnlockPassword=Unlock Password
+Button_ConfirmResponses=Hinweise best\u00e4tigen
+Button_ChangeResponses=Zur\u00fcck
+# Button_CheckCode=CheckCode
+Button_Logout=Abmeldung
+Button_Agree=Ich stimme zu
 Button_Cancel=Abbrechen
 Button_More=Mehr
 
@@ -59,20 +72,52 @@ Title_Error=Fehler
 Title_Success=Erfolg
 Title_UserEventHistory=Benutzerereignisse
 Title_Logout=Abmeldung
+# Title_UpdateAttributes=Update Profile
 Title_PasswordStrength=Passwortst\u00e4rke
+# Title_Shortcuts=Shortcuts
+# Title_PasswordWarning=Password Warning
+# Title_Captcha=Verification
+# Title_ConfirmResponses=Confirm Password Responses
+# Title_UserInformation=Account Information
+# Title_RandomPasswords=Random Passwords
+# Title_PasswordGuide=Password Guide
+# Title_ForgottenUsername=Forgotten Username
+# Title_Admin=Admin
 
+# Long_Title_Main_Menu=Password self-service main menu. From here you can change your current password, reset a forgotten password, or perform other related password activities.
+# Long_Title_ChangePassword=Change you current password.
+# Long_Title_ForgottenPassword=Recover your forgotten password.
+# Long_Title_SetupResponses=Setup your forgotten password responses. These secret questions will allow you to recover your password if you forget it.
+# Long_Title_ActivateUser=Activate a pre-configured account and establish a new password.
+# Long_Title_NewUser=Register a new user account.
+# Long_Title_UpdateAttributes=Update your user profile data.
+# Long_Title_UserEventHistory=Password event history.  See when you have changed your password in the past.
+# Long_Title_Shortcuts=Personalized shortcuts.
+# Long_Title_UserInformation=Information about your password and password policies.
+# Long_Title_Admin=PWM administrative functions
+# Long_Title_Logout=Logout of the PWM password self service application.
+# Long_Title_ForgottenUsername=Find your forgotten username.
+
+Display_Login=
 Display_PasswordExpired=Ihr Passwort ist abgelaufen. Sie m\u00fcssen jetzt ein neues Passwort einrichten
 Display_ChangePassword=Geben Sie bitte ein neues Passwort ein und klicken Sie auf die Schaltfl\u00e4che 'Passwort \u00e4ndern'. Falls Sie nicht umhinkommen das neue Passwort aufzuschreiben, verwahren Sie es an einem sicheren Ort.<br>
 Display_CheckingPassword=Passwortpr\u00fcfung\u2026
+Display_CheckingResponses=Hinweise werden gepr\u00fcft….
 Display_PleaseWait=Bitte warten \u2026
-Display_PasswordChangedTo=Die Passwortfelder wurden ge\u00e4ndert zu:
 Display_SetupResponses=Sollten Sie Ihr Passwort vergessen haben, k\u00f6nnen Sie es wiedererlangen, indem Sie auf Fragen antworten, die nur Ihnen bekannt sind.<p/>Bitte w\u00e4hlen Sie ihre Fragen und Antworten aus, die zu diesem Zwecke benutzt werden k\u00f6nnen, falls Sie einmal Ihr Passwort vergessen haben sollten.
+# Display_ConfirmResponses=Be sure your answers and questions are correct.  Check the spelling and punctuation.  In the event you forget your password, you will need to type in the exact answers to the questions below.
 Display_SetupRequiredResponses=Die Beantwortung dieser Fragen wird von Ihrem Administrator verlangt. Sollten Sie einmal Ihr Passwort vergessen haben, m\u00fcssen Sie all diese Fragen beantworten, damit Sie Ihr Passwort wiedererlangen.
 Display_SetupRandomResponses=Sollten Sie einmal Ihr Passwort vergessen haben, m\u00fcssen Sie mindestens %1% dieser Fragen beantworten, damit Sie Ihr Passwort wiedererlangen.
 Display_ForgottenPassword=Sollten Sie Ihr Passwort vergessen haben, folgen Sie den Anweisungen, um Ihr Passwort wiederzuerlangen. Sollten Sie zuvor keine Passworthinweise eingerichtet haben, werden Sie diesen Vorgang nicht zu Ende f\u00fchren k\u00f6nnen. <p/>Bitte geben Sie zu Anfang Ihren Benutzernamen ein.
+# Display_ForgottenUsername=Please type in the following information.  This information will be used to lookup your forgotten username.
 Display_RecoverPassword=Bitte beantworten Sie folgende Fragen. Wenn Sie die Fragen richtig beantworten, k\u00f6nnen Sie Ihr Passwort wiedererlangen.
 Display_RecoverRequiredResponses=Die Beantwortung dieser Fragen wird von Ihrem Administrator verlangt. Sollten Sie einmal Ihr Passwort vergessen haben, m\u00fcssen Sie all diese Fragen beantworten, damit Sie Ihr Passwort wiedererlangen.
 Display_RecoverRandomResponses=Sie m\u00fcssen die folgenden Fragen beantworten, um fortfahren zu k\u00f6nnen.
+# Display_RecoverRandomResponses=You must answer the following questions to continue.
+# Display_RecoverPasswordChoices=Your account has been locked due to excessive incorrect login attempts.  You may continue by unlocking your account or by changing your password.
+# Display_RecoverChoiceUnlock=Unlock your account.  If you remember your password, you can unlock your account by selecting this option.  Your password will not be changed.
+# Display_RecoverChoiceReset=Set a new password.  If you have forgotten your password and would like to set a new one, click here.  Your account will also be unlocked when you set a new password.
+# Display_RecoverEnterCode=To verify your identity, a security code has been sent to you at %1%.  Please enter the security code here.
 Display_NewUser=F\u00fcllen Sie dieses Formular aus, um ein neues Benutzerkonto zu er\u00f6ffnen. Danach k\u00f6nnen Sie ein neues Passwort festlegen. Damit ist die Erstellung des Kontos dann abgeschlossen. <p/>F\u00fchren Sie den Vorgang bitte zuende, sonst kann Ihr Konto eventuell nicht ordnungsgem\u00e4\u00df aktiviert werden.
 Display_ActivateUser=Bitte geben Sie die folgenden Informationen an, um Ihre Identit\u00e4t zu best\u00e4tigen. Diese Informationen werden dazu benutzt, Ihr Benutzerkonto zu identifizieren und zu aktivieren.<p/>F\u00fchren Sie den Vorgang bitte zuende, sonst kann Ihr Konto eventuell nicht ordnungsgem\u00e4\u00df aktiviert werden.
 Display_PleaseWaitBody=Ihr Passwort wird aktualisiert. Dieser Vorgang kann mehrere Minuten dauern. Bitte haben Sie etwas Geduld.
@@ -80,7 +125,8 @@ Display_ErrorBody=Es ist ein Fehler aufgetreten. Bitte schlie\u00dfen Sie Ihren 
 Display_UserEventHistory=Diese Seite zeigt Ihnen Ihre Passwort-Vorg\u00e4nge. Es werden nur die Vorg\u00e4nge mit PWM angezeigt. Alle angegebenen Zeiten entsprechen der Zeitzone %1%.
 Display_Logout=<b>Sie sind jetzt abgemeldet.</b><p/>Sie m\u00fcssen das Browserfenster schlie\u00dfen, bevor Sie sich erneut anmelden k\u00f6nnen.
 Title_UpdateAttributes=Attributaktualisierung
-Display_Login=
+# Display_PasswordWarn=Your password is about to expire.  Please change your password soon to avoid problems logging in.  Your password will expire on %1%.
+# Display_PasswordNoExpire=Your password does not expire.
 Display_IdleTimeout=Automatische Abmeldung in
 Display_Day=Tag
 Display_Days=Tage
@@ -92,4 +138,27 @@ Display_Second=Sekunde
 Display_Seconds=Sekunden
 Display_UpdateAttributes=Bitte aktualisieren Sie folgende Angaben:
 Display_AutoGeneratedPassword=Automatisch generierte Passw\u00f6rter
-Button_Logout=Abmeldung
+# Display_ShowPasswordGuide=Password Guide
+# Display_Shortcuts=Select any of the following links to continue.
+# Display_CommunicationError=Unable to communicate with server.  Continue when ready.
+# Display_StrengthMeter=Password Strength
+# Display_Captcha=Please enter the verification code below.  Typing in this code helps to protect your account from abuse.  
+# Display_CapsLockIsOn=CAPS LOCK is on
+# Display_LeaveDirtyPasswordPage=If you leave this page, your password will not be changed.
+# Display_PasswordStrengthLow=Strength: <b>Weak</b>
+# Display_PasswordStrengthMedium=Strength: <b>Good</b>
+# Display_PasswordStrengthHigh=Strength: <b>Strong</b>
+# Display_IdleWarningTitle=Idle Timeout
+# Display_IdleWarningMessage=Your browser session is about to timeout.  Please click anywhere on this page to resume.
+# Display_PasswordGeneration=The following passwords have been randomly generated for you.  These passwords are based on real \
+#   words to make them easier to remember, but have been modified to make them difficult to guess.
+# Display_PasswordPrompt=Please type your new password
+# Display_ResponsesPrompt=Please type your security responses
+
+# Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your<br/> password. \
+#   Try the following to make your password stronger:\
+#   <ul><li>Make the password longer</li>\
+#   <li>Do not repeat letters or numbers</li>\
+#   <li>Use mixed (upper and lower) case letters</li>\
+#   <li>Add more numbers</li>\
+#   <li>Add more symbol characters</li></ul>
