--- a/pwm/servlet/src/password/pwm/config/Display_fr.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_fr.properties
@@ -26,12 +26,17 @@ Field_Location=Emplacement
 Field_OldPassword=Ancien mot de passe
 Field_NewPassword=Nouveau mot de passe
 Field_ConfirmPassword=Confirmer le mot de passe
+Field_User_Supplied_Question=Question
+Field_Option_Select=Selectez une question
+Field_CurrentPassword=Mot de passe actuelle
 
 Button_Login=Connexion
 Button_Reset=R\u00e9initialiser
 Button_ChangePassword=Modifier le mot de passe
 Button_Hide=Masquer
 Button_Show=Afficher
+Button_Hide_Responses=Masquer des indices
+Button_Show_Responses=Afficher des indeces
 Button_SetResponses=D\u00e9finir des indices
 Button_Search=Rechercher
 Button_RecoverPassword=V\u00e9rifier les indices
@@ -39,10 +44,16 @@ Button_Create=Cr\u00e9er
 Button_Activate=Activer
 Button_Continue=Continuer
 Button_CloseWindow=Fermer la fen\u00eatre
+Button_Update=Actualiser
 Button_Verify=Vérifiez
+# Button_UnlockPassword=Unlock Password
+Button_ConfirmResponses=Confirmer des indices
+Button_ChangeResponses=Retour
+# Button_CheckCode=CheckCode
+Button_Logout=D\u00e9connexion
+# Button_Agree=I Agree
 Button_Cancel=Annuler
 Button_More=Plus
-
 
 Title_MainPage=Page principale
 Title_Login=Veuillez vous connecter
@@ -62,25 +73,59 @@ Title_Success=R\u00e9ussite
 Title_UserEventHistory=Historique des \u00e9v\u00e9nements d\u2019utilisateur
 Title_Logout=D\u00e9connexion
 Title_UpdateAttributes=Mettre \u00e0 jour les attributs
+# Title_PasswordStrength=Password Strength
+# Title_Shortcuts=Shortcuts
+# Title_PasswordWarning=Password Warning
+# Title_Captcha=Verification
+# Title_ConfirmResponses=Confirm Password Responses
+# Title_UserInformation=Account Information
+# Title_RandomPasswords=Random Passwords
+# Title_PasswordGuide=Password Guide
+# Title_ForgottenUsername=Forgotten Username
+# Title_Admin=Admin
 
+# Long_Title_Main_Menu=Password self-service main menu. From here you can change your current password, reset a forgotten password, or perform other related password activities.
+# Long_Title_ChangePassword=Change you current password.
+# Long_Title_ForgottenPassword=Recover your forgotten password.
+# Long_Title_SetupResponses=Setup your forgotten password responses. These secret questions will allow you to recover your password if you forget it.
+# Long_Title_ActivateUser=Activate a pre-configured account and establish a new password.
+# Long_Title_NewUser=Register a new user account.
+# Long_Title_UpdateAttributes=Update your user profile data.
+# Long_Title_UserEventHistory=Password event history.  See when you have changed your password in the past.
+# Long_Title_Shortcuts=Personalized shortcuts.
+# Long_Title_UserInformation=Information about your password and password policies.
+# Long_Title_Admin=PWM administrative functions
+# Long_Title_Logout=Logout of the PWM password self service application.
+# Long_Title_ForgottenUsername=Find your forgotten username.
+
+# Display_Login=
 Display_PasswordExpired=Votre mot de passe a expir\u00e9.  Vous devez cr\u00e9er un nouveau mot de passe maintenant.
 Display_ChangePassword=Veuillez modifier votre mot de passe. Veuillez pr\u00e9server la confidentialit\u00e9 de votre nouveau mot de passe.  Apr\u00e8s avoir entr\u00e9 votre nouveau mot de passe, cliquez sur le bouton Modifier le mot de passe.  Si vous devez prendre note de votre mot de passe, conservez-le dans un endroit s\u00fbr.  Votre nouveau mot de passe doit r\u00e9pondre aux exigences suivantes :
 Display_CheckingPassword=V\u00e9rification du mot de passe...
+# Display_CheckingResponses=Checking Answers....
 Display_PleaseWait=Veuillez patienter\u2026
-Display_PasswordChangedTo=Les champs du mot de passe ont \u00e9t\u00e9 modifi\u00e9s pour :
 Display_SetupResponses=Au cas o\u00f9 vous oublieriez votre mot de passe, vous pouvez le r\u00e9cup\u00e9rer en r\u00e9pondant \u00e0 une question que vous seul connaissez.<p/>Veuillez s\u00e9lectionner vos questions et les r\u00e9ponses qui peuvent \u00eatre utilis\u00e9es pour v\u00e9rifier votre identit\u00e9 en cas d\u2019oubli du mot de passe.
+# Display_ConfirmResponses=Be sure your answers and questions are correct.  Check the spelling and punctuation.  In the event you forget your password, you will need to type in the exact answers to the questions below.
 Display_SetupRequiredResponses=Ces questions sont requises par votre administrateur. En cas d\u2019oubli de votre mot de passe, vous devrez r\u00e9pondre \u00e0 toutes ces questions avant de pouvoir r\u00e9initialiser votre mot de passe.
 Display_SetupRandomResponses=En cas d\u2019oubli de votre mot de passe, vous devrez r\u00e9pondre \u00e0 au moins %1% de ces questions avant de pouvoir r\u00e9initialiser votre mot de passe.
 Display_ForgottenPassword=Si vous avez oubli\u00e9 votre mot de passe, suivez les invites pour r\u00e9initialiser votre mot de passe. Si vous n\u2019avez pas configur\u00e9 les indices de mot de passe pr\u00e9c\u00e9demment, vous ne pourrez pas compl\u00e9ter ce processus.<p/>Pour commencer, veuillez entrer votre nom d\u2019utilisateur.
+# Display_ForgottenUsername=Please type in the following information.  This information will be used to lookup your forgotten username.
 Display_RecoverPassword=Veuillez r\u00e9pondre aux questions suivantes. Si vous r\u00e9pondez correctement \u00e0 ces questions, vous pourrez r\u00e9initialiser votre mot de passe.
 Display_RecoverRequiredResponses=Ces questions sont requises par votre administrateur.
 Display_RecoverRandomResponses=Vous devez r\u00e9pondre aux questions suivantes pour pouvoir continuer.
+# Display_RecoverRandomResponses=You must answer the following questions to continue.
+# Display_RecoverPasswordChoices=Your account has been locked due to excessive incorrect login attempts.  You may continue by unlocking your account or by changing your password.
+# Display_RecoverChoiceUnlock=Unlock your account.  If you remember your password, you can unlock your account by selecting this option.  Your password will not be changed.
+# Display_RecoverChoiceReset=Set a new password.  If you have forgotten your password and would like to set a new one, click here.  Your account will also be unlocked when you set a new password.
+# Display_RecoverEnterCode=To verify your identity, a security code has been sent to you at %1%.  Please enter the security code here.
 Display_NewUser=Compl\u00e9tez ce formulaire pour cr\u00e9er un nouveau compte d\u2019utilisateur. Apr\u00e8s avoir compl\u00e9t\u00e9 ce formulaire, vous pouvez cr\u00e9er un nouveau mot de passe et terminer ainsi la configuration de votre compte. <p/> Veillez \u00e0 terminer le processus ou votre nouveau compte ne sera pas utilisable.
 Display_ActivateUser=Pour confirmer votre identit\u00e9, veuillez fournir les informations suivantes. Vos informations seront utilis\u00e9es pour localiser et activer votre compte d\u2019utilisateur.<p/>Veillez \u00e0 compl\u00e9ter le processus ou votre compte ne sera pas activ\u00e9 correctement.
 Display_PleaseWaitBody=Votre mot de passe est en cours de mise \u00e0 jour. Ce processus peut prendre plusieurs minutes. Merci de votre patience.
 Display_ErrorBody=Une erreur s\u2019est produite. Veuillez fermer votre navigateur.  Si cette erreur persiste, veuillez contacter votre service d\u2019assistance.
 Display_UserEventHistory=Cette page affiche l\u2019historique des \u00e9v\u00e9nements li\u00e9s \u00e0 votre mot de passe. Seules les op\u00e9rations r\u00e9alis\u00e9es avec PWM sont affich\u00e9es ici. Toutes les heures affich\u00e9es appartiennent au fuseau horaire %1%.
 Display_Logout=<b>Vous \u00eates d\u00e9sormais d\u00e9connect\u00e9.</b><p/>Vous devez fermer la fen\u00eatre de votre navigateur avant de pouvoir vous reconnecter.
+# Display_PasswordWarn=Your password is about to expire.  Please change your password soon to avoid problems logging in.  Your password will expire on %1%.
+# Display_PasswordNoExpire=Your password does not expire.
 Display_IdleTimeout=D\u00e9lai d'inactivit\u00e9 :
 Display_Day=jour
 Display_Days=jours
@@ -93,4 +138,27 @@ Display_Seconds=secondes
 Display_Login=
 Display_UpdateAttributes=Mettez \u00e0 jour les donn\u00e9es suivantes :
 Display_AutoGeneratedPassword=Mots de passe g\u00e9n\u00e9r\u00e9s automatiquement
-Button_Logout=D\u00e9connexion
+# Display_ShowPasswordGuide=Password Guide
+# Display_Shortcuts=Select any of the following links to continue.
+# Display_CommunicationError=Unable to communicate with server.  Continue when ready.
+# Display_StrengthMeter=Password Strength
+# Display_Captcha=Please enter the verification code below.  Typing in this code helps to protect your account from abuse.  
+# Display_CapsLockIsOn=CAPS LOCK is on
+# Display_LeaveDirtyPasswordPage=If you leave this page, your password will not be changed.
+# Display_PasswordStrengthLow=Strength: <b>Weak</b>
+# Display_PasswordStrengthMedium=Strength: <b>Good</b>
+# Display_PasswordStrengthHigh=Strength: <b>Strong</b>
+# Display_IdleWarningTitle=Idle Timeout
+# Display_IdleWarningMessage=Your browser session is about to timeout.  Please click anywhere on this page to resume.
+# Display_PasswordGeneration=The following passwords have been randomly generated for you.  These passwords are based on real \
+#   words to make them easier to remember, but have been modified to make them difficult to guess.
+# Display_PasswordPrompt=Please type your new password
+# Display_ResponsesPrompt=Please type your security responses
+
+# Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your<br/> password. \
+#   Try the following to make your password stronger:\
+#   <ul><li>Make the password longer</li>\
+#   <li>Do not repeat letters or numbers</li>\
+#   <li>Use mixed (upper and lower) case letters</li>\
+#   <li>Add more numbers</li>\
+#   <li>Add more symbol characters</li></ul>
