--- a/pwm/servlet/src/password/pwm/config/Display_it.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_it.properties
@@ -26,12 +26,17 @@ Field_Location=Posizione
 Field_OldPassword=Vecchia password
 Field_NewPassword=Nuova password
 Field_ConfirmPassword=Conferma password
+Field_User_Supplied_Question=Questione
+# Field_Option_Select=Select a question
+Field_CurrentPassword=Password corrente
 
 Button_Login=Accedi
 Button_Reset=Annulla
 Button_ChangePassword=Cambia password
 Button_Hide=Nascondi
 Button_Show=Mostra
+# Button_Hide_Responses=Hide Responses
+# Button_Show_Responses=Show Responses
 Button_SetResponses=Suggerimenti installazione
 Button_Search=Cerca
 Button_RecoverPassword=Controlla suggerimenti
@@ -39,7 +44,18 @@ Button_Create=Crea
 Button_Activate=Attiva
 Button_Continue=Continua
 Button_CloseWindow=Chiudi finestra
+# Button_Update=Update
+# Button_Verify=Verify
+# Button_UnlockPassword=Unlock Password
+# Button_ConfirmResponses=Confirm Responses
+# Button_ChangeResponses=Go Back
+# Button_CheckCode=CheckCode
+Button_Logout=Esci
+# Button_Agree=I Agree
+# Button_Cancel=Cancel
+# Button_More=More
 
+# Title_MainPage=Main Menu
 Title_Login=Apertura sessione
 Title_ChangePassword=Cambiamento password
 Title_SetupResponses=Suggerimenti per impostare la password
@@ -56,27 +72,60 @@ Title_Error=Errore
 Title_Success=Riuscito
 Title_UserEventHistory=Cronologia eventi utente
 Title_Logout=Esci
+Title_UpdateAttributes=Aggiorna attributi
+# Title_PasswordStrength=Password Strength
+# Title_Shortcuts=Shortcuts
+# Title_PasswordWarning=Password Warning
+# Title_Captcha=Verification
+# Title_ConfirmResponses=Confirm Password Responses
+# Title_UserInformation=Account Information
+# Title_RandomPasswords=Random Passwords
+# Title_PasswordGuide=Password Guide
+# Title_ForgottenUsername=Forgotten Username
+# Title_Admin=Admin
 
+# Long_Title_Main_Menu=Password self-service main menu. From here you can change your current password, reset a forgotten password, or perform other related password activities.
+# Long_Title_ChangePassword=Change you current password.
+# Long_Title_ForgottenPassword=Recover your forgotten password.
+# Long_Title_SetupResponses=Setup your forgotten password responses. These secret questions will allow you to recover your password if you forget it.
+# Long_Title_ActivateUser=Activate a pre-configured account and establish a new password.
+# Long_Title_NewUser=Register a new user account.
+# Long_Title_UpdateAttributes=Update your user profile data.
+# Long_Title_UserEventHistory=Password event history.  See when you have changed your password in the past.
+# Long_Title_Shortcuts=Personalized shortcuts.
+# Long_Title_UserInformation=Information about your password and password policies.
+# Long_Title_Admin=PWM administrative functions
+# Long_Title_Logout=Logout of the PWM password self service application.
+# Long_Title_ForgottenUsername=Find your forgotten username.
+
+Display_Login=
 Display_PasswordExpired=La password \u00e8 scaduta.  \u00c8 necessario impostare una nuova password adesso.
 Display_ChangePassword=Cambiare la password. Conservare la nuova password in un luogo sicuro.  Dopo aver immesso la nuova password, fare clic sul pulsante Cambia password.  Se si decide di annotarla, conservarla in un luogo sicuro.  La nuova password deve soddisfare i seguenti requisiti:
 Display_CheckingPassword=Verifica password in corso....
+# Display_CheckingResponses=Checking Answers....
 Display_PleaseWait=Attendere prego...
-Display_PasswordChangedTo=I campi della password hanno subito le seguenti modifiche:
 Display_SetupResponses=Se si dimentica la password, \u00e8 possibile recuperarla rispondendo a domande note solo all'utente.<p/>Scegliere le domande e le risposte da utilizzare per verificare l'identit\u00e0 dell'utente.
+# Display_ConfirmResponses=Be sure your answers and questions are correct.  Check the spelling and punctuation.  In the event you forget your password, you will need to type in the exact answers to the questions below.
 Display_SetupRequiredResponses=Queste domande sono richieste dall'amministratore. Prima di poter ripristinare la password dimenticata, \u00e8 necessario rispondere a dette domande.
 Display_SetupRandomResponses=Prima di poter ripristinare la password dimenticata, \u00e8 necessario rispondere almeno a %1% delle domande proposte.
 Display_ForgottenPassword=Per ripristinare la password dimenticata, seguire la procedura su schermo. Se non stati impostati i suggerimenti per la password, non sar\u00e0 possibile completare il processo.<p/>Per iniziare, immettere il nome utente.
+# Display_ForgottenUsername=Please type in the following information.  This information will be used to lookup your forgotten username.
 Display_RecoverPassword=Rispondere alle seguenti domande. Rispondendo correttamente, sar\u00e0 possibile ripristinare la password.
 Display_RecoverRequiredResponses=Queste domande sono richieste dall'amministratore.
 Display_RecoverRandomResponses=\u00c8 necessario rispondere alle seguenti domande per continuare.
+# Display_RecoverRandomResponses=You must answer the following questions to continue.
+# Display_RecoverPasswordChoices=Your account has been locked due to excessive incorrect login attempts.  You may continue by unlocking your account or by changing your password.
+# Display_RecoverChoiceUnlock=Unlock your account.  If you remember your password, you can unlock your account by selecting this option.  Your password will not be changed.
+# Display_RecoverChoiceReset=Set a new password.  If you have forgotten your password and would like to set a new one, click here.  Your account will also be unlocked when you set a new password.
+# Display_RecoverEnterCode=To verify your identity, a security code has been sent to you at %1%.  Please enter the security code here.
 Display_NewUser=Completare questo modulo per creare un nuovo account utente. Dopo aver completato il modulo, \u00e8 possibile impostare una nuova password e l'impostazione dell'account sar\u00e0 completata. <p/> Verificare di aver completato il processo, altrimenti il nuovo account non sar\u00e0 utilizzabile.
 Display_ActivateUser=Per confermare l'identit\u00e0 dell'utente, immettere le seguenti informazioni. Le informazioni immesse verranno utilizzate per individuare e attivare l'account utente.<p/>Verificare di aver completato il processo, altrimenti il nuovo account non sar\u00e0 utilizzabile.
 Display_PleaseWaitBody=\u00c8 in corso l'aggiornamento della password. Questo processo pu\u00f2 impiegare diversi minuti. Attendere prego.
 Display_ErrorBody=Si \u00e8 verificato un errore. Non chiudere il browser.  Se l'errore si ripete, contattare l'help desk.
 Display_UserEventHistory=Questa pagina mostra la cronologia eventi della password e solo le azioni eseguite con PWM. Gli orari riportati sono compresi nel fuso orario di %1%.
 Display_Logout=<b>La sessione \u00e8 chiusa.</b><p/>\u00c8 necessario chiudere la finestra del browser prima di poterne aprire un'altra.
-Title_UpdateAttributes=Aggiorna attributi
-Display_Login=
+# Display_PasswordWarn=Your password is about to expire.  Please change your password soon to avoid problems logging in.  Your password will expire on %1%.
+# Display_PasswordNoExpire=Your password does not expire.
 Display_IdleTimeout=Timeout di inattivit\u00e0:
 Display_Day=giorno
 Display_Days=giorni
@@ -88,4 +137,27 @@ Display_Second=secondo
 Display_Seconds=secondi
 Display_UpdateAttributes=Aggiornare le seguenti informazioni:
 Display_AutoGeneratedPassword=Password generate automaticamente
-Button_Logout=Esci
+# Display_ShowPasswordGuide=Password Guide
+# Display_Shortcuts=Select any of the following links to continue.
+# Display_CommunicationError=Unable to communicate with server.  Continue when ready.
+# Display_StrengthMeter=Password Strength
+# Display_Captcha=Please enter the verification code below.  Typing in this code helps to protect your account from abuse.  
+# Display_CapsLockIsOn=CAPS LOCK is on
+# Display_LeaveDirtyPasswordPage=If you leave this page, your password will not be changed.
+# Display_PasswordStrengthLow=Strength: <b>Weak</b>
+# Display_PasswordStrengthMedium=Strength: <b>Good</b>
+# Display_PasswordStrengthHigh=Strength: <b>Strong</b>
+# Display_IdleWarningTitle=Idle Timeout
+# Display_IdleWarningMessage=Your browser session is about to timeout.  Please click anywhere on this page to resume.
+# Display_PasswordGeneration=The following passwords have been randomly generated for you.  These passwords are based on real \
+#   words to make them easier to remember, but have been modified to make them difficult to guess.
+# Display_PasswordPrompt=Please type your new password
+# Display_ResponsesPrompt=Please type your security responses
+
+# Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your<br/> password. \
+#   Try the following to make your password stronger:\
+#   <ul><li>Make the password longer</li>\
+#   <li>Do not repeat letters or numbers</li>\
+#   <li>Use mixed (upper and lower) case letters</li>\
+#   <li>Add more numbers</li>\
+#   <li>Add more symbol characters</li></ul>
