--- a/pwm/servlet/src/password/pwm/config/Display_nl.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_nl.properties
@@ -72,7 +72,7 @@ Title_Error=Fout
 Title_Success=Succes
 Title_UserEventHistory=Gebruikershistorie
 Title_Logout=Afmelden
-Title_UpdateAttributes=Attributen wijzigen
+Title_UpdateAttributes=Gegevens wijzigen
 Title_PasswordStrength=Wachtwoordsterkte
 Title_Shortcuts=Weblinks
 Title_PasswordWarning=Wachtwoordwaarschuwing
@@ -86,7 +86,7 @@ Title_Admin=Beheer
 
 Long_Title_Main_Menu=Hoofdmenu van wachtwoordzelfbediening. Hier kunt u uw huidige wachtwoord wijzigen, een vergeten wachtwoord herstellen of andere wachtwoordgerelateerde activiteiten uitvoeren.
 Long_Title_ChangePassword=Wijzig uw huidige wachtwoord.
-Long_Title_ForgottenPassword=Herstel uw vergeten wachtwoord. Als uw eerder uw beveiligingsvragen heeft beantwoord, kunt u daarmee uw wachtwoord herstellen.
+Long_Title_ForgottenPassword=Herstel uw vergeten wachtwoord.
 Long_Title_SetupResponses=Beantwoord de beveiligingsvragen. Deze geheime vragen stellen u in staat om uw wachtwoord te herstellen indien u het vergeet.
 Long_Title_ActivateUser=Activeer een voorgeconfigureerde gebruiker en stel een nieuw wachtwoord in.
 Long_Title_NewUser=Registreer een nieuwe gebruiker.
@@ -96,6 +96,7 @@ Long_Title_Shortcuts=Persoonlijke weblinks.
 Long_Title_UserInformation=Informatie over uw wachtwoord en wachtwoordbeleid.
 Long_Title_Admin=PWM beheerfuncties
 Long_Title_Logout=Afmelden van de PWM wachtwoordzelfbediening.
+Long_Title_ForgottenUsername=Vind uw vergeten gebruikersnaam.
 
 Display_Login=
 Display_PasswordExpired=Uw wachtwoord is verlopen. U moet een nieuw wachtwoord invoeren.
@@ -103,12 +104,12 @@ Display_ChangePassword=<p>Wijzig alstublieft uw wachtwoord. Houd uw wachtwoord v
 Display_CheckingPassword=Wachtwoord valideren....
 Display_CheckingResponses=Antwoorden valideren....
 Display_PleaseWait=Even geduld alstublieft...
-Display_PasswordChangedTo=Het wachtwoord wordt gewijzigd naar:
 Display_SetupResponses=<p>Indien u uw wachtwoord vergeet, is het mogelijk om dit te herstellen door het beantwoorden van vragen waarvan alleen u het antwoord weet.</p><p>Selecteer alstublieft de vragen en antwoorden die kunnen worden gebruikt om uw identiteit te verifi\u00ebren als u uw wachtwoord bent vergeten. Omdat de antwoorden op deze vragen toegang kunnen verlenen tot uw account dient u antwoorden te geven die niet gemakkelijk door anderen kunnen worden geraden of ontdekt.</p>
 Display_ConfirmResponses=Wees er zeker van dat de vragen en antwoorden correct zijn. Controleer de spelling. Indien u uw wachtwoord bent vergeten dient u de antwoorden exact gelijk in te voeren.
 Display_SetupRequiredResponses=De beheerder wenst dat u antwoord geeft op deze vragen. Indien u uw wachtwoord vergeten bent, moet u antwoord geven op al deze vragen om uw wachtwoord te herstellen.
 Display_SetupRandomResponses=De beheerder wenst dat u antwoord geeft op deze vragen. Indien u uw wachtwoord vergeten bent, moet u antwoord geven op tenminste %1% van deze vragen om uw wachtwoord te herstellen.
 Display_ForgottenPassword=Als u uw wachtwoord vergeten bent dient u de aanwijzingen te volgen om uw wachtwoord te herstellen. Indien u nog geen antwoorden heeft opgegeven, bent u niet in staat om dit proces te voltooien. U dient dan contact op te nemen met de helpdesk.<p/>Voer uw gebruikersnaam in om te beginnen.
+Display_ForgottenUsername=Vul alstublieft de volgende informatie in. Deze informatie wordt gebruikt om uw vergeten gebruikersnaam op te zoeken.
 Display_RecoverPassword=Beantwoord alstublieft de volgende vragen. Als u deze vragen correct beantwoordt wordt u in staat gesteld om uw wachtwoord te wijzigen.
 Display_RecoverRequiredResponses=Deze vragen worden door de beheerder afgedwongen.
 Display_RecoverRandomResponses=U moet de volgende vragen beantwoorden om verder te gaan.
