--- a/pwm/servlet/src/password/pwm/config/Display_pt.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_pt.properties
@@ -26,12 +26,17 @@ Field_Location=Local
 Field_OldPassword=Senha Anterior
 Field_NewPassword=Senha Nova
 Field_ConfirmPassword=Confirme a Senha
+# Field_User_Supplied_Question=Question
+# Field_Option_Select=Select a question
+# Field_CurrentPassword=Current Password
 
 Button_Login=Iniciar a Sess\u00e3o
 Button_Reset=Apagar
 Button_ChangePassword=Mudar a Senha
 Button_Hide=Ocultar
 Button_Show=Exibir
+# Button_Hide_Responses=Hide Responses
+# Button_Show_Responses=Show Responses
 Button_SetResponses=Configurar Refer\u00eancias
 Button_Search=Busca
 Button_RecoverPassword=Consultar Refer\u00eancias
@@ -39,7 +44,18 @@ Button_Create=Criar
 Button_Activate=Ativar
 Button_Continue=Continuar
 Button_CloseWindow=Fechar a Janela
+# Button_Update=Update
+# Button_Verify=Verify
+# Button_UnlockPassword=Unlock Password
+# Button_ConfirmResponses=Confirm Responses
+# Button_ChangeResponses=Go Back
+# Button_CheckCode=CheckCode
+Button_Logout=Encerrar a sess\u00e3o
+# Button_Agree=I Agree
+# Button_Cancel=Cancel
+# Button_More=More
 
+# Title_MainPage=Main Menu
 Title_Login=Inicie a sess\u00e3o, por favor
 Title_ChangePassword=Mudar a Senha
 Title_SetupResponses=Configurar Refer\u00eancias para a Senha
@@ -56,36 +72,92 @@ Title_Error=Erro
 Title_Success=Sucesso
 Title_UserEventHistory=Hist\u00f3rico de Eventos do Usu\u00e1rio
 Title_Logout=Encerrar a sess\u00e3o
+Title_UpdateAttributes=Atualizar Atributos
+# Title_PasswordStrength=Password Strength
+# Title_Shortcuts=Shortcuts
+# Title_PasswordWarning=Password Warning
+# Title_Captcha=Verification
+# Title_ConfirmResponses=Confirm Password Responses
+# Title_UserInformation=Account Information
+# Title_RandomPasswords=Random Passwords
+# Title_PasswordGuide=Password Guide
+# Title_ForgottenUsername=Forgotten Username
+# Title_Admin=Admin
 
+# Long_Title_Main_Menu=Password self-service main menu. From here you can change your current password, reset a forgotten password, or perform other related password activities.
+# Long_Title_ChangePassword=Change you current password.
+# Long_Title_ForgottenPassword=Recover your forgotten password.
+# Long_Title_SetupResponses=Setup your forgotten password responses. These secret questions will allow you to recover your password if you forget it.
+# Long_Title_ActivateUser=Activate a pre-configured account and establish a new password.
+# Long_Title_NewUser=Register a new user account.
+# Long_Title_UpdateAttributes=Update your user profile data.
+# Long_Title_UserEventHistory=Password event history.  See when you have changed your password in the past.
+# Long_Title_Shortcuts=Personalized shortcuts.
+# Long_Title_UserInformation=Information about your password and password policies.
+# Long_Title_Admin=PWM administrative functions
+# Long_Title_Logout=Logout of the PWM password self service application.
+# Long_Title_ForgottenUsername=Find your forgotten username.
+
+Display_Login=
 Display_PasswordExpired=Sua senha expirou. Voc\u00ea dever\u00e1 configurar uma senha nova agora.
 Display_ChangePassword=Por favor, mude a sua senha. Conserve-a em lugar seguro. Ap\u00f3s digit\u00e1-la, clique no bot\u00e3o Mudar a Senha. Se tiver que anot\u00e1-la em algum lugar, certifique-se que ela seja mantida em lugar seguro. A sua senha nova dever\u00e1 satisfazer os seguintes requisitos: 
 Display_CheckingPassword=Verificando a Senha
+# Display_CheckingResponses=Checking Answers....
 Display_PleaseWait=Por favor, espere
-Display_PasswordChangedTo=Os campos da senha foram modificados para:
 Display_SetupResponses=No caso de esquecer a sua senha, voc\u00ea poder\u00e1 recuper\u00e1-la respondendo perguntas conhecidas apenas por voc\u00ea.<p/>Por favor, escolha as perguntas e respostas que possam ser usadas para verificar a sua identidade, no caso de esquecer a sua senha.
+# Display_ConfirmResponses=Be sure your answers and questions are correct.  Check the spelling and punctuation.  In the event you forget your password, you will need to type in the exact answers to the questions below.
 Display_SetupRequiredResponses=Estas perguntas s\u00e3o exigidas pelo seu administrador. Se porventura esquecer a sua senha, voc\u00ea precisar\u00e1 responder todas estas perguntas antes de poder recompor a sua senha.
 Display_SetupRandomResponses=Se esquecer a sua senha, voc\u00ea precisar\u00e1 responder pelo menos %1% destas perguntas para poder recompor a sua senha
 Display_ForgottenPassword=Se voc\u00ea esquecer a sua senha, siga as instru\u00e7\u00f5es para poder recomp\u00f4-la. Se voc\u00ea n\u00e3o configurou as refer\u00eancias da sua senha previamente, n\u00e3o poder\u00e1 concluir este processo. <p/> Para iniciar, por favor, digite o seu nome de usu\u00e1rio
+# Display_ForgottenUsername=Please type in the following information.  This information will be used to lookup your forgotten username.
 Display_RecoverPassword=Por favor, responda as seguintes perguntas. Se respond\u00ea-las corretamente, poder\u00e1 ent\u00e3o recompor a sua senha.
 Display_RecoverRequiredResponses=Estas perguntas s\u00e3o exigidas pelo seu administrador.
 Display_RecoverRandomResponses=Voc\u00ea dever\u00e1 responder as seguintes perguntas para poder continuar.
+# Display_RecoverRandomResponses=You must answer the following questions to continue.
+# Display_RecoverPasswordChoices=Your account has been locked due to excessive incorrect login attempts.  You may continue by unlocking your account or by changing your password.
+# Display_RecoverChoiceUnlock=Unlock your account.  If you remember your password, you can unlock your account by selecting this option.  Your password will not be changed.
+# Display_RecoverChoiceReset=Set a new password.  If you have forgotten your password and would like to set a new one, click here.  Your account will also be unlocked when you set a new password.
+# Display_RecoverEnterCode=To verify your identity, a security code has been sent to you at %1%.  Please enter the security code here.
 Display_NewUser=Preencha este formul\u00e1rio para criar uma conta de usu\u00e1rio novo. Depois de preenchido, poder\u00e1 estabelecer uma senha nova e a configura\u00e7\u00e3o da sua conta estar\u00e1 conclu\u00edda. <p/>. Certifique-se que tenha conclu\u00eddo o processo, ou sua conta nova n\u00e3o poder\u00e1 ser usada. 
 Display_ActivateUser=Para confirmar a sua identidade, por favor, preencha a informa\u00e7\u00e3o a seguir. Sua informa\u00e7\u00e3o ser\u00e1 usada para localizar e ativar sua conta de usu\u00e1rio.<p/>Certifique-se que tenha conclu\u00eddo o processo, ou sua conta n\u00e3o ser\u00e1 ativada apropriadamente
 Display_PleaseWaitBody=A sua senha est\u00e1 sendo atualizada. Este processo pode levar alguns minutos, por favor, seja paciente.
 Display_ErrorBody=Ocorreu um erro. Por favor, feche o seu browser.  Se isto ocorrer freq\u00fcentemente, por favor, contate a sua central de atendimento.
 Display_UserEventHistory=Esta p\u00e1gina exibe o hist\u00f3rico de eventos da sua senha. Apenas as atividades desenvolvidas com PWM s\u00e3o exibidas aqui. Todos os hor\u00e1rios listados est\u00e3o em %1% da zona de hor\u00e1rio.
 Display_Logout=<b>A sua sess\u00e3o foi encerrada.</b><p/>A janela do seu browser dever\u00e1 ser fechada, antes de poder reiniciar a sess\u00e3o.
+# Display_PasswordWarn=Your password is about to expire.  Please change your password soon to avoid problems logging in.  Your password will expire on %1%.
+# Display_PasswordNoExpire=Your password does not expire.
+Display_IdleTimeout=Tempo ocioso:
 Display_Day=dia
 Display_Days=dias
 Display_Hour=hora
 Display_Hours=horas
-Display_IdleTimeout=Tempo ocioso:
 Display_Minute=minuto
 Display_Minutes=minutos
 Display_Second=segundo
 Display_Seconds=segundos
 Display_UpdateAttributes=Por favor atualize as seguintes informa\u00e7\u00f5es:
-Display_Login=
-Title_UpdateAttributes=Atualizar Atributos
 Display_AutoGeneratedPassword=Senhas Geradas Automaticamente
-Button_Logout=Encerrar a sess\u00e3o
+# Display_ShowPasswordGuide=Password Guide
+# Display_Shortcuts=Select any of the following links to continue.
+# Display_CommunicationError=Unable to communicate with server.  Continue when ready.
+# Display_StrengthMeter=Password Strength
+# Display_Captcha=Please enter the verification code below.  Typing in this code helps to protect your account from abuse.  
+# Display_CapsLockIsOn=CAPS LOCK is on
+# Display_LeaveDirtyPasswordPage=If you leave this page, your password will not be changed.
+# Display_PasswordStrengthLow=Strength: <b>Weak</b>
+# Display_PasswordStrengthMedium=Strength: <b>Good</b>
+# Display_PasswordStrengthHigh=Strength: <b>Strong</b>
+# Display_IdleWarningTitle=Idle Timeout
+# Display_IdleWarningMessage=Your browser session is about to timeout.  Please click anywhere on this page to resume.
+# Display_PasswordGeneration=The following passwords have been randomly generated for you.  These passwords are based on real \
+#   words to make them easier to remember, but have been modified to make them difficult to guess.
+# Display_PasswordPrompt=Please type your new password
+# Display_ResponsesPrompt=Please type your security responses
+
+# Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your<br/> password. \
+#   Try the following to make your password stronger:\
+#   <ul><li>Make the password longer</li>\
+#   <li>Do not repeat letters or numbers</li>\
+#   <li>Use mixed (upper and lower) case letters</li>\
+#   <li>Add more numbers</li>\
+#   <li>Add more symbol characters</li></ul>
