--- a/pwm/servlet/src/password/pwm/config/Message_cs.properties
+++ b/pwm/servlet/src/password/pwm/config/Message_cs.properties
@@ -58,9 +58,15 @@ Requirement_MinUnique=Mus\u00ed obsahovat alespo\u0148 tento po\u010det jedine\u
 Requirement_MinUniquePlural=Mus\u00ed obsahovat alespo\u0148 tento po\u010det jedine\u010dn\u00fdch znak\u016f: %field%
 Requirement_RequiredChars=Mus\u00ed obsahovat alespo\u0148 jeden z\u00a0n\u00e1sleduj\u00edc\u00edch znak\u016f:
 Requirement_DisAllowedValues=Nesm\u00ed obsahovat \u017e\u00e1dnou z\u00a0n\u00e1sleduj\u00edc\u00edch hodnot:
+# Requirement_DisAllowedAttributes=Must not include part of your name or username.
 Requirement_WordList=Nesm\u00ed obsahovat b\u011b\u017en\u00e9 slovo nebo b\u011b\u017en\u011b pou\u017e\u00edvanou posloupnost znak\u016f.
 Requirement_OldChar=Nem\u016f\u017ee m\u013at v\u013ace ne\u017e %field% znak z Va\u0161eho star\u00e9ho hesla.
 Requirement_OldCharPlural=Nem?\u017ee m\u013at v\u013ace ne\u017e %field% znak? z Va\u0161eho star\u00e9ho hesla.
+# Requirement_CaseSensitive=Password is case sensitive.
+# Requirement_NotCaseSensitive=Password is not case sensitive.
+# Requirement_MinimumFrequency=Can be changed no more often then once every %field%.
+# Requirement_ADComplexity=Must have at least three types of the following characters: <ul><li>Uppercase (A-Z)</li><li>Lowercase (a-z)</li><li>Number (0-9)</li><li>Symbol (!, #, $, etc.)</li></ul>
+# Requirement_UniqueRequired=New password may not have been used previously.
 
 Success_PasswordChange=Heslo bylo \u00fasp\u011b\u0161n\u011b zm\u011bn\u011bno.
 Success_SetupResponse=Tajn\u00e1 ot\u00e1zka a odpov\u011b\u010f byly \u00fasp\u011b\u0161n\u011b nastaveny.
@@ -68,9 +74,14 @@ Success_Unknown=Operace byla \u00fasp\u011b\u0161n\u011b dokon\u010dena.
 Success_CreateUser=Nov\u00fd u\u017eivatelsk\u00fd \u00fa\u010det byl \u00fasp\u011b\u0161n\u011b vytvo\u0159en.  Pokra\u010dujte v\u00a0procesu, v\u00a0opa\u010dn\u00e9m p\u0159\u00edpad\u011b nebude p\u0159\u00edstup k nov\u00e9mu \u00fa\u010dtu mo\u017en\u00fd.
 Success_ActivateUser=U\u017eivatelsk\u00fd \u00fa\u010det byl \u00fasp\u011b\u0161n\u011b aktivov\u00e1n.  Dokon\u010dete proces, v\u00a0opa\u010dn\u00e9m p\u0159\u00edpad\u011b nebude p\u0159\u00edstup k\u00a0\u00fa\u010dtu mo\u017en\u00fd.
 Success_UpdateAttributes=U\u017eivatelsk\u00e9 informace byly \u00fasp\u011b\u0161n\u011b aktualizov\u00e1ny.
+# Success_ResponsesMeetRules=Your responses meet the requirements.  Click Save Responses when ready.
+# Success_UnlockAccount=Your account has been unlocked.
+# Success_ForgottenUsername=Your username is %field%.  Please record your username for future use.
 
 EventLog_ChangePassword=Zm\u011bnit heslo
 EventLog_RecoverPassword=Obnovit zapomenut\u00e9 heslo
 EventLog_SetupResponses=Nastavit rady k heslu
 EventLog_ActivateUser=Aktivovat u\u017eivatele
 EventLog_UpdateAttributes=Aktualizovat atributy
+# EventLog_IntruderLockout=Intruder Lockout
+
