--- a/pwm/servlet/src/password/pwm/config/Message_de.properties
+++ b/pwm/servlet/src/password/pwm/config/Message_de.properties
@@ -58,7 +58,15 @@ Requirement_MinUnique=Muss mindestens %field% Einzelzeichen enthalten.
 Requirement_MinUniquePlural=Muss mindestens %field% Einzelzeichen enthalten.
 Requirement_RequiredChars=Muss mindestens eines der folgenden Zeichen enthalten:
 Requirement_DisAllowedValues=Darf keinen der folgenden Werte enthalten:
+# Requirement_DisAllowedAttributes=Must not include part of your name or username.
 Requirement_WordList=Darf kein g\u00e4ngiges Wort und keine g\u00e4ngige Zeichenfolge enthalten.
+Requirement_OldChar=Can not have more than %field% character from your current password.
+Requirement_OldCharPlural=Can not have more than %field% characters from your current password.
+# Requirement_CaseSensitive=Password is case sensitive.
+# Requirement_NotCaseSensitive=Password is not case sensitive.
+# Requirement_MinimumFrequency=Can be changed no more often then once every %field%.
+# Requirement_ADComplexity=Must have at least three types of the following characters: <ul><li>Uppercase (A-Z)</li><li>Lowercase (a-z)</li><li>Number (0-9)</li><li>Symbol (!, #, $, etc.)</li></ul>
+# Requirement_UniqueRequired=New password may not have been used previously.
 
 Success_PasswordChange=Das Passwort wurde erfolgreich ge\u00e4ndert.
 Success_SetupResponse=Ihre geheime Frage und Antwort wurden erfolgreich gespeichert.
@@ -66,9 +74,14 @@ Success_Unknown=Der Vorgang wurde erfolgreich abgeschlossen.
 Success_CreateUser=Ihr neues Benutzerkonto wurde erfolgreich erstellt. F\u00fchren Sie den Vorgang bitte zuende, sonst erhalten Sie keinen Zugang zu Ihrem Konto.
 Success_ActivateUser=Ihr Benutzerkonto wurde erfolgreich aktiviert. F\u00fchren Sie den Vorgang bitte zuende, sonst erhalten Sie keinen Zugang zu Ihrem Konto.
 Success_UpdateAttributes=Ihre Benutzerinformation wurde erfolgreich aktualisiert.
+# Success_ResponsesMeetRules=Your responses meet the requirements.  Click Save Responses when ready.
+# Success_UnlockAccount=Your account has been unlocked.
+# Success_ForgottenUsername=Your username is %field%.  Please record your username for future use.
 
 EventLog_ChangePassword=Passwort \u00e4ndern
 EventLog_RecoverPassword=Vergessenes Passwort wiedererlangen
 EventLog_SetupResponses=Passworthinweise einrichten
 EventLog_ActivateUser=Benutzer aktivieren
 EventLog_UpdateAttributes=Attribute aktualisieren
+# EventLog_IntruderLockout=Intruder Lockout
+
