--- a/pwm/servlet/src/password/pwm/config/Message_es.properties
+++ b/pwm/servlet/src/password/pwm/config/Message_es.properties
@@ -58,7 +58,15 @@ Requirement_MinUnique=Debe tener por lo menos %field% caracter \u00fanico.
 Requirement_MinUniquePlural=Debe tener por lo menos %field% caracteres \u00fanicos.
 Requirement_RequiredChars=Debe incluir por lo menos uno de los siguientes caracteres:
 Requirement_DisAllowedValues=No debe incluir ninguno de los siguientes valores:
+# Requirement_DisAllowedAttributes=Must not include part of your name or username.
 Requirement_WordList=No debe incluir una palabra com\u00fan o una secuencia de caracteres de uso com\u00fan.
+# Requirement_OldChar=Can not have more than %field% character from your current password.
+# Requirement_OldCharPlural=Can not have more than %field% characters from your current password.
+# Requirement_CaseSensitive=Password is case sensitive.
+# Requirement_NotCaseSensitive=Password is not case sensitive.
+# Requirement_MinimumFrequency=Can be changed no more often then once every %field%.
+# Requirement_ADComplexity=Must have at least three types of the following characters: <ul><li>Uppercase (A-Z)</li><li>Lowercase (a-z)</li><li>Number (0-9)</li><li>Symbol (!, #, $, etc.)</li></ul>
+# Requirement_UniqueRequired=New password may not have been used previously.
 
 Success_PasswordChange=Su clave ha sido cambiada con \u00e9xito.
 Success_SetupResponse=Su pregunta secreta y respuesta han sido establecidas con \u00e9xito.
@@ -66,9 +74,14 @@ Success_Unknown=La operaci\u00f3n se ha completado con \u00e9xito.
 Success_CreateUser=Su nueva cuenta de usuario se ha creado con \u00e9xito. Aseg\u00farese de continuar el proceso o no podr\u00e1 acceder a su nueva cuenta.
 Success_ActivateUser=Su nueva cuenta de usuario se ha activado con \u00e9xito. Aseg\u00farese de continuar el proceso o no podr\u00e1 acceder a su nueva cuenta.
 Success_UpdateAttributes=Su informaci\u00f3n de usuario se ha actualizado con \u00e9xito.
+# Success_ResponsesMeetRules=Your responses meet the requirements.  Click Save Responses when ready.
+# Success_UnlockAccount=Your account has been unlocked.
+# Success_ForgottenUsername=Your username is %field%.  Please record your username for future use.
 
 EventLog_ChangePassword=Cambiar clave
 EventLog_RecoverPassword=Recuperar clave olvidada
 EventLog_SetupResponses=Establecer pistas para clave
 EventLog_ActivateUser=Activar usuario
 EventLog_UpdateAttributes=Actualizar atributos
+# EventLog_IntruderLockout=Intruder Lockout
+
