--- a/pwm/servlet/src/password/pwm/config/Message_fr.properties
+++ b/pwm/servlet/src/password/pwm/config/Message_fr.properties
@@ -58,7 +58,10 @@ Requirement_MinUnique=Doit comporter au moins %field% caract\u00e8re unique.
 Requirement_MinUniquePlural=Doit comporter au moins %field% caract\u00e8res uniques.
 Requirement_RequiredChars=Doit comporter au moins l\u2019un des caract\u00e8res suivants\u00a0:
 Requirement_DisAllowedValues=Ne peut contenir l\u2019une des valeurs suivantes : %field%
+# Requirement_DisAllowedAttributes=Must not include part of your name or username.
 Requirement_WordList=Ne doit pas contenir un mot courant ou une s\u00e9quence de caract\u00e8res couramment utilis\u00e9e.
+# Requirement_OldChar=Can not have more than %field% character from your current password.
+# Requirement_OldCharPlural=Can not have more than %field% characters from your current password.
 Requirement_CaseSensitive=Le mot de passe est sensible \u00e0 la casse
 Requirement_NotCaseSensitive=Le mot de passe n\u2019est pas sensible \u00e0 la casse
 Requirement_MinimumFrequency=Vous devez attendre tous les %field% pour changer votre mot de passe
@@ -73,9 +76,12 @@ Success_ActivateUser=Votre compte d\u2019utilisateur a \u00e9t\u00e9 activ\u00e9
 Success_UpdateAttributes=Vos informations d\u2019utilisateur ont \u00e9t\u00e9 mises \u00e0 jour.
 Success_ResponsesMeetRules=Les r\u00e9ponses sont conformes
 Success_UnlockAccount=Votre compte a \u00e9t\u00e9 d\u00e9verrouill\u00e9
+# Success_ForgottenUsername=Your username is %field%.  Please record your username for future use.
 
 EventLog_ChangePassword=Modifier le mot de passe
 EventLog_RecoverPassword=R\u00e9cup\u00e9rer un mot de passe oubli\u00e9
 EventLog_SetupResponses=Configurer des indices de mot de passe
 EventLog_ActivateUser=Activer l\u2019utilisateur
 EventLog_UpdateAttributes=Mettre \u00e0 jour\u00a0les attributs
+# EventLog_IntruderLockout=Intruder Lockout
+
