--- a/pwm/servlet/src/password/pwm/config/Message_it.properties
+++ b/pwm/servlet/src/password/pwm/config/Message_it.properties
@@ -58,7 +58,15 @@ Requirement_MinUnique=Deve contenere almeno %field% carattere unico.
 Requirement_MinUniquePlural=Deve contenere almeno %field% caratteri unici.
 Requirement_RequiredChars=Deve contenere almeno uno di ciascuno dei seguenti caratteri:
 Requirement_DisAllowedValues=Non deve contenere alcuno dei seguenti valori:
+# Requirement_DisAllowedAttributes=Must not include part of your name or username.
 Requirement_WordList=Non deve contenere una parola comune o una sequenza di caratteri di uso comune.
+# Requirement_OldChar=Can not have more than %field% character from your current password.
+# Requirement_OldCharPlural=Can not have more than %field% characters from your current password.
+# Requirement_CaseSensitive=Password is case sensitive.
+# Requirement_NotCaseSensitive=Password is not case sensitive.
+# Requirement_MinimumFrequency=Can be changed no more often then once every %field%.
+# Requirement_ADComplexity=Must have at least three types of the following characters: <ul><li>Uppercase (A-Z)</li><li>Lowercase (a-z)</li><li>Number (0-9)</li><li>Symbol (!, #, $, etc.)</li></ul>
+# Requirement_UniqueRequired=New password may not have been used previously.
 
 Success_PasswordChange=La password \u00e8 stata cambiata.
 Success_SetupResponse=Domanda e risposta segrete sono state impostate.
@@ -66,9 +74,14 @@ Success_Unknown=L'operazione \u00e8 stata completata.
 Success_CreateUser=Il nuovo account utente \u00e8 stato creato.  Continuare il processo, altrimenti il nuovo account sar\u00e0 inaccessibile.
 Success_ActivateUser=L'account utente \u00e8 stato attivato.  Completare il processo, altrimenti il nuovo account sar\u00e0 inaccessibile.
 Success_UpdateAttributes=Le informazioni utente sono state aggiornate.
+# Success_ResponsesMeetRules=Your responses meet the requirements.  Click Save Responses when ready.
+# Success_UnlockAccount=Your account has been unlocked.
+# Success_ForgottenUsername=Your username is %field%.  Please record your username for future use.
 
 EventLog_ChangePassword=Cambiamento password
 EventLog_RecoverPassword=Recupero password dimenticata
 EventLog_SetupResponses=Suggerimenti per impostare la password
 EventLog_ActivateUser=Attivazione utente
 EventLog_UpdateAttributes=Aggiornamento attributi
+# EventLog_IntruderLockout=Intruder Lockout
+
