--- a/pwm/servlet/src/password/pwm/config/Message_nl.properties
+++ b/pwm/servlet/src/password/pwm/config/Message_nl.properties
@@ -76,6 +76,7 @@ Success_ActivateUser=Uw nieuwe gebruikersaccount is succesvol geactiveerd. Doorl
 Success_UpdateAttributes=Uw gebruikersinformatie is succesvol bijgewerkt.
 Success_ResponsesMeetRules=Antwoorden moeten aan de eisen voldoen.
 Success_UnlockAccount=Uw gebruikersaccount is succesvol ontsloten.
+Success_ForgottenUsername=Uw gebruikersnaam is %field%.  Onthoud uw gebruikersnaam voor later gebruik.
 
 EventLog_ChangePassword=Wachtwoord wijzigen
 EventLog_RecoverPassword=Vergeten wachtwoord achterhalen
