--- a/pwm/servlet/src/password/pwm/config/Message_pl.properties
+++ b/pwm/servlet/src/password/pwm/config/Message_pl.properties
@@ -58,9 +58,15 @@ Requirement_MinUnique=Musi zawiera\u0107 co najmniej %field% znak specjalny.
 Requirement_MinUniquePlural=Musi zawiera\u0107 co najmniej %field% znak\u00f3w specjalnych.
 Requirement_RequiredChars=Musi zawiera\u0107 co najmniej jeden z nast\u0119puj\u0105cych znak\u00f3w:
 Requirement_DisAllowedValues=Nie mo\u017ce zawiera\u0107 \u017cadnej z poni\u017cszych warto\u015bci:
+# Requirement_DisAllowedAttributes=Must not include part of your name or username.
 Requirement_WordList=Nie mo\u017ce zawiera\u0107 pospolitych wyraz\u00f3w lub powszechnie stosowanych ciag\u00f3w znak\u00f3w:
 Requirement_OldChar=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %field% znak z poprzedniego has\u0142a.
 Requirement_OldCharPlural=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %field% znak\u00f3w z poprzedniego has\u0142a.
+# Requirement_CaseSensitive=Password is case sensitive.
+# Requirement_NotCaseSensitive=Password is not case sensitive.
+# Requirement_MinimumFrequency=Can be changed no more often then once every %field%.
+# Requirement_ADComplexity=Must have at least three types of the following characters: <ul><li>Uppercase (A-Z)</li><li>Lowercase (a-z)</li><li>Number (0-9)</li><li>Symbol (!, #, $, etc.)</li></ul>
+# Requirement_UniqueRequired=New password may not have been used previously.
 
 Success_PasswordChange=Twoje has\u0142o zosta\u0142o pomy\u015blnie zmienione.
 Success_SetupResponse=Twoje tajne pytanie i odpowied\u017a zosta\u0142y pomy\u015blnie wygenerowane.
@@ -68,9 +74,14 @@ Success_Unknown=Operacja zosta\u0142a pomy\u015blnie zako\u0144czona.
 Success_CreateUser=Nowe konto u\u017cytkownika zosta\u0142o pomy\u015blnie utworzone. Kontynuuj proces, w przeciwnym razie konto b\u0119dzie niedost\u0119pne.
 Success_ActivateUser=Nowe konto u\u017cytkownika zosta\u0142o pomy\u015blnie utworzone. Kontynuuj proces, w przeciwnym razie konto b\u0119dzie niedost\u0119pne.
 Success_UpdateAttributes=Twoj profil u\u017cytkownika zosta\u0142 pomy\u015blnie zaktualizowany.
+# Success_ResponsesMeetRules=Your responses meet the requirements.  Click Save Responses when ready.
+# Success_UnlockAccount=Your account has been unlocked.
+# Success_ForgottenUsername=Your username is %field%.  Please record your username for future use.
 
 EventLog_ChangePassword=Zmie\u0144 has\u0142o
 EventLog_RecoverPassword=Odzyskaj haslo
 EventLog_SetupResponses=Generuj podpowiedzi do has\u0142a
 EventLog_ActivateUser=Aktywuj u\u017cytkownika
 EventLog_UpdateAttributes=Aktualizuj atrybuty
+# EventLog_IntruderLockout=Intruder Lockout
+
