--- a/pwm/servlet/src/password/pwm/error/PwmError_de.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError_de.properties
@@ -20,6 +20,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
+# Password_MissingConfirm=Password meets requirements, please type confirmation password
 Password_DoesNotMatch=Neues Passwort und Passwortbest\u00e4tigung stimmen nicht \u00fcberein
 Password_Missing=Passwort fehlt
 Password_PreviouslyUsed=Das neue Passwort wurde bereits fr\u00fcher benutzt
@@ -52,11 +53,23 @@ Password_FirstIsSpecial=Der erste Buchstabe darf kein Sonderzeichen sein
 Password_LastIsSpecial=Der letzte Buchstabe darf kein Sonderzeichen sein
 Password_HistoryFull=Die Passwortliste is voll
 Password_MeetsRules=Das neue Passwort entspricht den Regeln
+# Password_TooSoon=Not enough time has passed since last password change
+# Password_UsingDisallowedValue=New password is using a value that is not allowed
+# Password_TooWeak=Password is too weak.  Try adding more numbers, symbols or mixed case letters.
+# Password_TooManyMonAlpha=New password has too many non-letter characters
+# Password_NotEnoughNonAlpha=New password does not have enough non-letter characters
+# Password_UnknownValidation=New password does not meet requirements.  Please try using a different password.
 
 Error_WrongAnswer=Falsche Antwort
 Error_WrongPassword=Benutzername oder Passwort falsch
 Error_Response_WrongUsername=Benutzername falsch bzw. kein Hinweis responseerlegt
 Error_Response_NoResponse=Benutzername falsch bzw. kein Hinweis responseerlegt
+# Error_Response_TooShort=The response for question "%field%" is too short
+# Error_Response_Wordlist=The response for question "%field%" is too commonly used
+# Error_Response_TooLong=The response for question "%field%" is too long
+# Error_Response_Duplicate=The response for question "%field%" can not be the same as another response
+# Error_Challenge_Duplicate=Each question must be unique.
+# Error_Missing_Challenge_Text=Missing text for a user supplied question
 Error_UserAuthenticated=Sie sind bereits authentifiziert
 Error_MissingParameter=Es fehlt ein notwendiger Parameter
 Error_DirectoryUnavailable=Verzeichnis nicht verf\u00fcgbar
@@ -73,6 +86,20 @@ Error_AddressIntruder=Die maximal erlaubte Anzahl von Anmeldungsversuchen mit Ih
 Error_SessionIntruder=Die maximal erlaubte Anzahl von Anmeldungsversuchen dieser Sitzung wurde \u00fcberschritten.
 Error_BadSessionPassword=Sitzungspasswort kann nicht erstellt werden.
 Error_Unauthorized=Sie sind nicht berechtigt diese Aktion auszuf\u00fchren.
+# Error_BadSession=Unable to establish a session with your browser.  Please close your browser and try again.
+# Error_MissingRequiredResponse=Please type all of the required responses.
+# Error_MissingRandomResponse=Please type an additional random response.
+# Error_BadCaptchaResponse=Incorrect verification code, please try again.
+# Error_CaptchaAPIError=An error occurred while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
+# Error_InvalidConfig=The PWM configuration is missing or invalid.  Check the error log.
+# Error_InvalidFormID=Your browser session is invalid or has expired.  Please close your browser and then try again.
+# Error_MissingNamingAttr=The naming attribute is missing, please contact your administrator.
+# Error_TokenMissingContact=There is no contact information available for your account.  Please contact your administrator. 
+# Error_TokenIncorrect=Incorrect code, please try again.
+# Error_BadCurrentPassword=Current password is incorrect, please try again.
+# Error_Closing=The operation can not complete because PWM is shutting down.
+# Error_Missing_GUID=Unable to locate a GUID for user.  Please contact your administrator.
+# Error_TokenExpired=The token you have entered is expired and is no longer valid.  Please try again.
 
 Error_FieldRequired=%field% ist eine Mussfeld
 Error_FieldNotANumber=%field% muss eine Zahl sein
@@ -81,3 +108,12 @@ Error_FieldTooShort=%field% ist zu kurz
 Error_FieldTooLong=%field% ist zu lang
 Error_FieldDuplicate=%field% ist schon in Benutzung
 Error_FieldBadConfirm=%field% Felder stimmen nicht \u00fcberein
+
+# Error_ConfigUploadSuccess=File uploaded successfully
+# Error_ConfigUploadFailure=File failed to upload: %field%
+# Error_ConfigSaveSuccess=Configuration saved successfully.  PWM restart has been requested.  PWM may be unavailable while restarting.  If the restart request fails you may need to restart PWM manually.
+# Error_ConfigFormatError=Configuration format error: %field%
+# Error_ConfigLdapFailure=Unable to connect to LDAP directory server: %field%
+# Error_ConfigLdapSuccess=Successfully connected to LDAP directory server
+
+# Error_HTTP_404=The page you requested could not be found.
