--- a/pwm/servlet/src/password/pwm/error/PwmError_es.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError_es.properties
@@ -20,6 +20,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
+# Password_MissingConfirm=Password meets requirements, please type confirmation password
 Password_DoesNotMatch=Las claves no coinciden
 Password_Missing=Falta la clave
 Password_PreviouslyUsed=La nueva clave se ha utilizado anteriormente
@@ -34,6 +35,7 @@ Password_NotEnoughLower=La clave nueva no tiene suficientes letras min\u00fascul
 Password_NotEnoughSpecial=La clave nueva no tiene suficientes caracteres de s\u00edmbolos (no alfanum\u00e9ricos)
 Password_NotEnoughUnique=La clave nueva no tiene suficientes caracteres \u00fanicos
 Password_TooManyRepeat=La clave nueva tiene demasiados caracteres repetidos
+# Password_TooManySpecial=New password has too many special (non letter or number) characters
 Password_TooManyAlpha=La clave nueva tiene demasiadas letras
 Password_TooManyNumeric=La clave nueva tiene demasiados n\u00fameros
 Password_TooManyLower=La clave nueva tiene demasiadas letras min\u00fasculas
@@ -49,12 +51,25 @@ Password_FirstIsNumeric=El primer caracter no debe ser num\u00e9rico
 Password_LastIsNumeric=El \u00faltimo caracter no debe ser num\u00e9rico
 Password_FirstIsSpecial=El primer caracter no debe ser de s\u00edmbolo (no alfanum\u00e9rico)
 Password_LastIsSpecial=El \u00faltimo caracter no debe ser de s\u00edmbolo (no alfanum\u00e9rico)
+# Password_HistoryFull=New password history is full
 Password_MeetsRules=La clave nueva cumple con las exigencias
+# Password_TooSoon=Not enough time has passed since last password change
+# Password_UsingDisallowedValue=New password is using a value that is not allowed
+# Password_TooWeak=Password is too weak.  Try adding more numbers, symbols or mixed case letters.
+# Password_TooManyMonAlpha=New password has too many non-letter characters
+# Password_NotEnoughNonAlpha=New password does not have enough non-letter characters
+# Password_UnknownValidation=New password does not meet requirements.  Please try using a different password.
 
 Error_WrongAnswer=Respuesta equivocada
 Error_WrongPassword=El nombre de usuario o la clave no es v\u00e1lida
 Error_Response_WrongUsername=El nombre de usuario no es v\u00e1lido o no tiene una sugerencia configurada
 Error_Response_NoResponse=El nombre de usuario no es v\u00e1lido o no tiene una sugerencia configurada
+# Error_Response_TooShort=The response for question "%field%" is too short
+# Error_Response_Wordlist=The response for question "%field%" is too commonly used
+# Error_Response_TooLong=The response for question "%field%" is too long
+# Error_Response_Duplicate=The response for question "%field%" can not be the same as another response
+# Error_Challenge_Duplicate=Each question must be unique.
+# Error_Missing_Challenge_Text=Missing text for a user supplied question
 Error_UserAuthenticated=Usted ya ha sido autenticado
 Error_MissingParameter=Falta un par\u00e1metro requerido
 Error_DirectoryUnavailable=Directorio no disponible
@@ -70,6 +85,21 @@ Error_UserIntruder=Se agot\u00f3 el m\u00e1ximo de intentos de conexi\u00f3n par
 Error_AddressIntruder=Se agot\u00f3 el m\u00e1ximo de intentos de conexi\u00f3n para su direcci\u00f3n IP. Intente m\u00e1s tarde.
 Error_SessionIntruder=Se agot\u00f3 el m\u00e1ximo de intentos de conexi\u00f3n para esta sesi\u00f3n.
 Error_BadSessionPassword=No se puede establecer clave de sesi\u00f3n.
+# Error_Unauthorized=You do not have permission to perform the requested action.
+# Error_BadSession=Unable to establish a session with your browser.  Please close your browser and try again.
+# Error_MissingRequiredResponse=Please type all of the required responses.
+# Error_MissingRandomResponse=Please type an additional random response.
+# Error_BadCaptchaResponse=Incorrect verification code, please try again.
+# Error_CaptchaAPIError=An error occurred while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
+# Error_InvalidConfig=The PWM configuration is missing or invalid.  Check the error log.
+# Error_InvalidFormID=Your browser session is invalid or has expired.  Please close your browser and then try again.
+# Error_MissingNamingAttr=The naming attribute is missing, please contact your administrator.
+# Error_TokenMissingContact=There is no contact information available for your account.  Please contact your administrator. 
+# Error_TokenIncorrect=Incorrect code, please try again.
+# Error_BadCurrentPassword=Current password is incorrect, please try again.
+# Error_Closing=The operation can not complete because PWM is shutting down.
+# Error_Missing_GUID=Unable to locate a GUID for user.  Please contact your administrator.
+# Error_TokenExpired=The token you have entered is expired and is no longer valid.  Please try again.
 
 Error_FieldRequired=%field% es obligatorio
 Error_FieldNotANumber=%field% debe ser num\u00e9rico
@@ -78,3 +108,12 @@ Error_FieldTooShort=%field% es muy corto
 Error_FieldTooLong=%field% es muy largo
 Error_FieldDuplicate=%field% ya est\u00e1 en uso
 Error_FieldBadConfirm=%field% campos no coinciden
+
+# Error_ConfigUploadSuccess=File uploaded successfully
+# Error_ConfigUploadFailure=File failed to upload: %field%
+# Error_ConfigSaveSuccess=Configuration saved successfully.  PWM restart has been requested.  PWM may be unavailable while restarting.  If the restart request fails you may need to restart PWM manually.
+# Error_ConfigFormatError=Configuration format error: %field%
+# Error_ConfigLdapFailure=Unable to connect to LDAP directory server: %field%
+# Error_ConfigLdapSuccess=Successfully connected to LDAP directory server
+
+# Error_HTTP_404=The page you requested could not be found.
