--- a/pwm/servlet/src/password/pwm/error/PwmError_nl.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError_nl.properties
@@ -25,6 +25,7 @@ Password_DoesNotMatch=Wachtwoorden zijn niet gelijk
 Password_Missing=Wachtwoord ontbreekt
 Password_PreviouslyUsed=Het nieuwe wachtwoord is reeds eerder gebruikt
 Password_BadPassword=Het nieuwe wachtwoord voldoet niet aan de regels
+# Password_BadOldPassword=
 Password_TooLong=Het nieuwe wachtwoord is te lang
 Password_TooShort=Het nieuwe wachtwoord is te kort
 Password_NotEnoughNum=Het nieuwe wachtwoord bevat niet genoeg nummers
@@ -74,7 +75,7 @@ Error_MissingParameter=Een benodigde parameter ontbreekt
 Error_DirectoryUnavailable=De LDAP Directory is niet beschikbaar.  Als dit probleem zich blijft voordoen dient u contact op te nemen met de helpdesk.
 Error_Unknown=Onbekende fout
 Error_NewUserValidationFailed=\u00c9\u00e9n of meer waarden zijn incorrect
-Error_CantMatchUser=Gebruikersnaam niet gevonden
+Error_CantMatchUser=De gebruikersnaam is niet gevonden. Probeer het nogmaals.
 Error_ServiceNotAvailable=Service is niet beschikbaar
 Error_UserMisMatch=Fout in de aanmelding, herstart alstublieft uw browser
 Error_ActivateUserNoQueryMatch=Uw account is niet gerechtigd tot activatie
@@ -98,6 +99,7 @@ Error_TokenIncorrect=Ongeldige code, probeer het opnieuw.
 Error_BadCurrentPassword=Het huidige wachtwoord is niet juist, probeer het opnieuw.
 Error_Closing=De bewerking kon niet worden voltooid, omdat de applicatie aan het afsluiten is.
 Error_Missing_GUID=Kan geen globaal unieke identificatie (GUID) voor de gebruiker vinden. Neem contact op met de beheerder.
+Error_TokenExpired=De ingevoerde code is verlopen en niet langer geldig. Probeer het nogmaals.
 
 Error_FieldRequired=%field% is verplicht
 Error_FieldNotANumber=%field% moet een nummer zijn
@@ -113,3 +115,5 @@ Error_ConfigSaveSuccess=De instellingen zijn succesvol opgeslagen.  PWM zal word
 Error_ConfigFormatError=Er bevindt zich een fout in de instellingen: %field%
 Error_ConfigLdapFailure=Er is geen verbinding mogelijk met de LDAP-directoryserver: %field%
 Error_ConfigLdapSuccess=Succesvol verbonden met de LDAP-directoryserver
+
+Error_HTTP_404=De gevraagde pagina is niet gevonden.
