--- a/pwm/servlet/src/password/pwm/error/PwmError_pl.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError_pl.properties
@@ -20,6 +20,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
+# Password_MissingConfirm=Password meets requirements, please type confirmation password
 Password_DoesNotMatch=Has\u0142a nie zgadzaj\u0105 si\u0119
 Password_Missing=Brak has\u0142a
 Password_PreviouslyUsed=Nowe has\u0142o zosta\u0142o wykorzystane poprzednio
@@ -34,6 +35,7 @@ Password_NotEnoughLower=Nowe has\u0142o nie ma wymaganej liczby ma\u0142ych lite
 Password_NotEnoughSpecial=Nowe has\u0142o nie ma wymaganej liczby znak\u00f3w nie-alfanumerycznych
 Password_NotEnoughUnique=Nowe has\u0142o nie ma wymaganej liczby znak\u00f3w specjalnych
 Password_TooManyRepeat=Nowe has\u0142o zawiera za du\u017co znak\u00f3w powtarzaj\u0105cych si\u0119
+# Password_TooManySpecial=New password has too many special (non letter or number) characters
 Password_TooManyAlpha=Nowe has\u0142o ma za du\u017co liter
 Password_TooManyNumeric=Nowe has\u0142o ma za du\u017co cyfr
 Password_TooManyLower=Nowe has\u0142o ma za du\u017co ma\u0142ych liter
@@ -49,12 +51,25 @@ Password_FirstIsNumeric=Pierwszy znak nie mo\u017ce by\u0107 numeryczny
 Password_LastIsNumeric=Ostatni znak nie mo\u017ce by\u0107 numeryczny
 Password_FirstIsSpecial=Pierwszy znak nie mo\u017ce by\u0107 znakiem nie-alfanumerycznym
 Password_LastIsSpecial=Ostatni znak nie mo\u017ce by\u0107 znakiem nie-alfanumerycznym
+# Password_HistoryFull=New password history is full
 Password_MeetsRules=Nowe has\u0142o spe\u0142nia wymagania odno\u015bnie zasad generowania has\u0142a
+# Password_TooSoon=Not enough time has passed since last password change
+# Password_UsingDisallowedValue=New password is using a value that is not allowed
+# Password_TooWeak=Password is too weak.  Try adding more numbers, symbols or mixed case letters.
+# Password_TooManyMonAlpha=New password has too many non-letter characters
+# Password_NotEnoughNonAlpha=New password does not have enough non-letter characters
+# Password_UnknownValidation=New password does not meet requirements.  Please try using a different password.
 
 Error_WrongAnswer=Nieprawid\u0142owa odpowied\u017a
 Error_WrongPassword=Nieprawid\u0142owa nazwa u\u017cytkownika lub nieprawid\u0142owe has\u0142o
 Error_Response_WrongUsername=Nieprawid\u0142owa nazwa u\u017cytkownika lub brak skonfigurowanej podpowiedzi
 Error_Response_NoResponse=Nieprawid\u0142owa nazwa u\u017cytkownika lub brak skonfigurowanej podpowiedzi
+# Error_Response_TooShort=The response for question "%field%" is too short
+# Error_Response_Wordlist=The response for question "%field%" is too commonly used
+# Error_Response_TooLong=The response for question "%field%" is too long
+# Error_Response_Duplicate=The response for question "%field%" can not be the same as another response
+# Error_Challenge_Duplicate=Each question must be unique.
+# Error_Missing_Challenge_Text=Missing text for a user supplied question
 Error_UserAuthenticated=U\u017cytkownik jest ju\u017c zweryfikowany
 Error_MissingParameter=Brak wymaganego parametru
 Error_DirectoryUnavailable=Katalog niedost\u0119pny
@@ -70,6 +85,21 @@ Error_UserIntruder=Przekroczono maksymaln\u0105 liczb\u0119 pr\u00f3b dla tego I
 Error_AddressIntruder=Przekroczono maksymaln\u0105 liczb\u0119 pr\u00f3b dla adresu IP. Prosimy poczeka\u0107 i spr\u00f3bowa\u0107 ponownie.
 Error_SessionIntruder=Przekroczono maksymaln\u0105 liczb\u0119 pr\u00f3b dlateh sesji.
 Error_BadSessionPassword=Nie mo\u017cna ustali\u0107 has\u0142a dla tej sesji.
+# Error_Unauthorized=You do not have permission to perform the requested action.
+# Error_BadSession=Unable to establish a session with your browser.  Please close your browser and try again.
+# Error_MissingRequiredResponse=Please type all of the required responses.
+# Error_MissingRandomResponse=Please type an additional random response.
+# Error_BadCaptchaResponse=Incorrect verification code, please try again.
+# Error_CaptchaAPIError=An error occurred while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
+# Error_InvalidConfig=The PWM configuration is missing or invalid.  Check the error log.
+# Error_InvalidFormID=Your browser session is invalid or has expired.  Please close your browser and then try again.
+# Error_MissingNamingAttr=The naming attribute is missing, please contact your administrator.
+# Error_TokenMissingContact=There is no contact information available for your account.  Please contact your administrator. 
+# Error_TokenIncorrect=Incorrect code, please try again.
+# Error_BadCurrentPassword=Current password is incorrect, please try again.
+# Error_Closing=The operation can not complete because PWM is shutting down.
+# Error_Missing_GUID=Unable to locate a GUID for user.  Please contact your administrator.
+# Error_TokenExpired=The token you have entered is expired and is no longer valid.  Please try again.
 
 Error_FieldBadConfirm=%field% - pola nie zgadzaj\u0105 si\u0119
 Error_FieldDuplicate=%field% - ju\u017c istnieje
@@ -78,3 +108,12 @@ Error_FieldNotANumber=%field% - musi by\u0107 liczb\u0105
 Error_FieldRequired=%field% - pole wymagane
 Error_FieldTooLong=%field% - zbyt d\u0142ugi wpis
 Error_FieldTooShort=%field% - zbyt kr\u00f3tki wpis
+
+# Error_ConfigUploadSuccess=File uploaded successfully
+# Error_ConfigUploadFailure=File failed to upload: %field%
+# Error_ConfigSaveSuccess=Configuration saved successfully.  PWM restart has been requested.  PWM may be unavailable while restarting.  If the restart request fails you may need to restart PWM manually.
+# Error_ConfigFormatError=Configuration format error: %field%
+# Error_ConfigLdapFailure=Unable to connect to LDAP directory server: %field%
+# Error_ConfigLdapSuccess=Successfully connected to LDAP directory server
+
+# Error_HTTP_404=The page you requested could not be found.
