--- a/pwm/servlet/src/password/pwm/error/PwmError_pt.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError_pt.properties
@@ -20,6 +20,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
+# Password_MissingConfirm=Password meets requirements, please type confirmation password
 Password_DoesNotMatch=As senhas n\u00e3o coincidem
 Password_Missing=Est\u00e1 faltando a senha
 Password_PreviouslyUsed=A senha nova foi utilizada anteriormente
@@ -34,6 +35,7 @@ Password_NotEnoughLower=A senha nova n\u00e3o cont\u00e9m letras min\u00fasculas
 Password_NotEnoughSpecial=A senha nova n\u00e3o cont\u00e9m caracteres s\u00edmbolos (n\u00e3o alfanum\u00e9ricos) suficientes
 Password_NotEnoughUnique=A senha nova n\u00e3o cont\u00e9m caracteres individualizados suficientes
 Password_TooManyRepeat=A senha nova cont\u00e9m muitos caracteres repetitivos
+# Password_TooManySpecial=New password has too many special (non letter or number) characters
 Password_TooManyAlpha=A senha nova cont\u00e9m muitas letras
 Password_TooManyNumeric=A senha nova cont\u00e9m muitos n\u00fameros
 Password_TooManyLower=A senha nova cont\u00e9m muitas letras min\u00fasculas
@@ -49,12 +51,25 @@ Password_FirstIsNumeric=O primeiro caractere n\u00e3o deve ser num\u00e9rico
 Password_LastIsNumeric=O \u00faltimo caractere n\u00e3o deve ser num\u00e9rico
 Password_FirstIsSpecial=O primeiro caractere n\u00e3o deve ser um caractere s\u00edmbolo (n\u00e3o alfanum\u00e9rico)
 Password_LastIsSpecial=O \u00faltimo caractere n\u00e3o deve ser um caractere s\u00edmbolo (n\u00e3o alfanum\u00e9rico)
+# Password_HistoryFull=New password history is full
 Password_MeetsRules=A senha nova satisfaz os requisitos das regras de preenchimento
+# Password_TooSoon=Not enough time has passed since last password change
+# Password_UsingDisallowedValue=New password is using a value that is not allowed
+# Password_TooWeak=Password is too weak.  Try adding more numbers, symbols or mixed case letters.
+# Password_TooManyMonAlpha=New password has too many non-letter characters
+# Password_NotEnoughNonAlpha=New password does not have enough non-letter characters
+# Password_UnknownValidation=New password does not meet requirements.  Please try using a different password.
 
 Error_WrongAnswer=A resposta est\u00e1 incorreta
 Error_WrongPassword=O nome de usu\u00e1rio ou a senha n\u00e3o s\u00e3o v\u00e1lidos
 Error_Response_WrongUsername=O nome de usu\u00e1rio n\u00e3o \u00e9 v\u00e1lido ou n\u00e3o tem uma refer\u00eancia configurada
 Error_Response_NoResponse=O nome de usu\u00e1rio n\u00e3o \u00e9 v\u00e1lido ou n\u00e3o tem uma refer\u00eancia configurada
+# Error_Response_TooShort=The response for question "%field%" is too short
+# Error_Response_Wordlist=The response for question "%field%" is too commonly used
+# Error_Response_TooLong=The response for question "%field%" is too long
+# Error_Response_Duplicate=The response for question "%field%" can not be the same as another response
+# Error_Challenge_Duplicate=Each question must be unique.
+# Error_Missing_Challenge_Text=Missing text for a user supplied question
 Error_UserAuthenticated=Voc\u00ea j\u00e1 est\u00e1 autenticado
 Error_MissingParameter=Est\u00e1 faltando um par\u00e2metro necess\u00e1rio
 Error_DirectoryUnavailable=Diret\u00f3rio indispon\u00edvel
@@ -70,6 +85,21 @@ Error_UserIntruder=Foram excedidas as tentativas para iniciar a sess\u00e3o para
 Error_AddressIntruder=Foram excedidas as tentativas de endere\u00e7o PI para iniciar a sess\u00e3o. Tente novamente mais tarde.
 Error_SessionIntruder=Foram excedidas as tentativas para iniciar esta sess\u00e3o.
 Error_BadSessionPassword=Impossibilidade de estabelecer a senha da sess\u00e3o.
+# Error_Unauthorized=You do not have permission to perform the requested action.
+# Error_BadSession=Unable to establish a session with your browser.  Please close your browser and try again.
+# Error_MissingRequiredResponse=Please type all of the required responses.
+# Error_MissingRandomResponse=Please type an additional random response.
+# Error_BadCaptchaResponse=Incorrect verification code, please try again.
+# Error_CaptchaAPIError=An error occurred while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
+# Error_InvalidConfig=The PWM configuration is missing or invalid.  Check the error log.
+# Error_InvalidFormID=Your browser session is invalid or has expired.  Please close your browser and then try again.
+# Error_MissingNamingAttr=The naming attribute is missing, please contact your administrator.
+# Error_TokenMissingContact=There is no contact information available for your account.  Please contact your administrator. 
+# Error_TokenIncorrect=Incorrect code, please try again.
+# Error_BadCurrentPassword=Current password is incorrect, please try again.
+# Error_Closing=The operation can not complete because PWM is shutting down.
+# Error_Missing_GUID=Unable to locate a GUID for user.  Please contact your administrator.
+# Error_TokenExpired=The token you have entered is expired and is no longer valid.  Please try again.
 
 Error_FieldBadConfirm=%field% campos n\u00e3o coincidem
 Error_FieldDuplicate=%field% n\u00e3o \u00e9 usado
@@ -78,3 +108,12 @@ Error_FieldNotANumber=%field% deve ser um n\u00famero
 Error_FieldRequired=%field% \u00e9 obrigat\u00f3rio
 Error_FieldTooLong=%field% \u00e9 muito longo
 Error_FieldTooShort=%field% \u00e9 muito pequeno
+
+# Error_ConfigUploadSuccess=File uploaded successfully
+# Error_ConfigUploadFailure=File failed to upload: %field%
+# Error_ConfigSaveSuccess=Configuration saved successfully.  PWM restart has been requested.  PWM may be unavailable while restarting.  If the restart request fails you may need to restart PWM manually.
+# Error_ConfigFormatError=Configuration format error: %field%
+# Error_ConfigLdapFailure=Unable to connect to LDAP directory server: %field%
+# Error_ConfigLdapSuccess=Successfully connected to LDAP directory server
+
+# Error_HTTP_404=The page you requested could not be found.
