--- a/pwm/servlet/src/password/pwm/config/Display_cs.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_cs.properties
@@ -26,12 +26,17 @@ Field_Location=Um\u00edst\u011bn\u00ed
 Field_OldPassword=Star\u00e9 heslo
 Field_NewPassword=Nov\u00e9 heslo
 Field_ConfirmPassword=Potvrdit heslo
+# Field_User_Supplied_Question=Question
+# Field_Option_Select=Select a question
+# Field_CurrentPassword=Current Password
 
 Button_Login=P\u0159ihl\u00e1sit
 Button_Reset=Vymazat
 Button_ChangePassword=Zm\u011bnit heslo
 Button_Hide=Skr\u00fdt
 Button_Show=Zobrazit
+# Button_Hide_Responses=Hide Responses
+# Button_Show_Responses=Show Responses
 Button_SetResponses=Nastavit rady
 Button_Search=Hledat
 Button_RecoverPassword=Zkontrolovat rady
@@ -40,9 +45,17 @@ Button_Activate=Aktivovat
 Button_Continue=Pokra\u010dovat
 Button_CloseWindow=Zav\u0159\u00edt okno
 Button_Update=Aktualizovat
+# Button_Verify=Verify
+# Button_UnlockPassword=Unlock Password
+# Button_ConfirmResponses=Confirm Responses
+# Button_ChangeResponses=Go Back
+# Button_CheckCode=CheckCode
+Button_Logout=Odhl\u00e1sit
+# Button_Agree=I Agree
 Button_Cancel=Zru\u0161it
 Button_More=V\u00edce
 
+Title_MainPage=Hlavn\u00ed strana
 Title_Login=P\u0159ihlaste se
 Title_ChangePassword=Zm\u011bnit heslo
 Title_SetupResponses=Nastavit rady k heslu
@@ -60,26 +73,59 @@ Title_Success=\u00dasp\u011bch
 Title_UserEventHistory=Historie ud\u00e1lost\u00ed u\u017eivatele
 Title_Logout=Odhl\u00e1sit
 Title_UpdateAttributes=Aktualizovat atributy
+# Title_PasswordStrength=Password Strength
+# Title_Shortcuts=Shortcuts
+# Title_PasswordWarning=Password Warning
+# Title_Captcha=Verification
+# Title_ConfirmResponses=Confirm Password Responses
+# Title_UserInformation=Account Information
+# Title_RandomPasswords=Random Passwords
+# Title_PasswordGuide=Password Guide
+# Title_ForgottenUsername=Forgotten Username
+# Title_Admin=Admin
 
+# Long_Title_Main_Menu=Password self-service main menu. From here you can change your current password, reset a forgotten password, or perform other related password activities.
+# Long_Title_ChangePassword=Change you current password.
+# Long_Title_ForgottenPassword=Recover your forgotten password.
+# Long_Title_SetupResponses=Setup your forgotten password responses. These secret questions will allow you to recover your password if you forget it.
+# Long_Title_ActivateUser=Activate a pre-configured account and establish a new password.
+# Long_Title_NewUser=Register a new user account.
+# Long_Title_UpdateAttributes=Update your user profile data.
+# Long_Title_UserEventHistory=Password event history.  See when you have changed your password in the past.
+# Long_Title_Shortcuts=Personalized shortcuts.
+# Long_Title_UserInformation=Information about your password and password policies.
+# Long_Title_Admin=PWM administrative functions
+# Long_Title_Logout=Logout of the PWM password self service application.
+# Long_Title_ForgottenUsername=Find your forgotten username.
+
+Display_Login=Probl\u00e9my? Obra?te se pros\u00edm na Va\u0161i technickou podporu.
 Display_PasswordExpired=Platnost hesla vypr\u0161ela.  Je nutn\u00e9 nastavit nov\u00e9 heslo.
 Display_ChangePassword=Zm\u011b\u0148te heslo. Udr\u017eujte nov\u00e9 heslo v bezpe\u010d\u00ed.  Po zad\u00e1n\u00ed nov\u00e9ho hesla klepn\u011bte na tla\u010d\u00edtko Zm\u011bnit heslo.  Pokud si mus\u00edte heslo zapsat, udr\u017eujte jej na bezpe\u010dn\u00e9m m\u00edst\u011b.  Nov\u00e9 heslo mus\u00ed spl\u0148ovat n\u00e1sleduj\u00edc\u00ed po\u017eadavky:
 Display_CheckingPassword=Kontrola hesla...
+# Display_CheckingResponses=Checking Answers....
 Display_PleaseWait=\u010cekejte pros\u00edm...
-Display_PasswordChangedTo=Pole s\u00a0hesly byla zm\u011bn\u011bna takto:
 Display_SetupResponses=Pokud zapomenete heslo, je mo\u017en\u00e9 jej obnovit odpov\u011bd\u00ed na ot\u00e1zky, kter\u00e9 zn\u00e1te pouze vy.<p/>Vyberte ot\u00e1zky a odpov\u011bdi, kter\u00e9 chcete pou\u017e\u00edt k ov\u011b\u0159en\u00ed identity v\u00a0p\u0159\u00edpad\u011b, \u017ee zapomenete heslo.
+# Display_ConfirmResponses=Be sure your answers and questions are correct.  Check the spelling and punctuation.  In the event you forget your password, you will need to type in the exact answers to the questions below.
 Display_SetupRequiredResponses=Tyto ot\u00e1zky jsou vy\u017eadov\u00e1ny spr\u00e1vcem. Kdy\u017e zapomenete heslo, bude p\u0159ed resetov\u00e1n\u00edm hesla nutn\u00e9 odpov\u011bd\u011bt na v\u0161echny tyto ot\u00e1zky.
 Display_SetupRandomResponses=Kdy\u017e zapomenete heslo, bude k resetov\u00e1n\u00ed hesla nutn\u00e9 odpov\u011bd\u011bt nejm\u00e9n\u011b na tento po\u010det ot\u00e1zek: %1%
 Display_ForgottenPassword=Pokud jste zapomn\u011bli heslo, resetujte heslo podle pokyn\u016f. Pokud jste d\u0159\u00edve nenastavili rady k\u00a0heslu, nebude mo\u017en\u00e9 tento proces prov\u00e9st.<p/>Za\u010dn\u011bte zad\u00e1n\u00edm u\u017eivatelsk\u00e9ho jm\u00e9na.
+# Display_ForgottenUsername=Please type in the following information.  This information will be used to lookup your forgotten username.
 Display_RecoverPassword=Odpov\u011bzte na n\u00e1sleduj\u00edc\u00ed ot\u00e1zky. Kdy\u017e na tyto ot\u00e1zky odpov\u00edte spr\u00e1vn\u011b, bude mo\u017en\u00e9 resetovat heslo.
 Display_RecoverRequiredResponses=Tyto ot\u00e1zky jsou vy\u017eadov\u00e1ny spr\u00e1vcem.
 Display_RecoverRandomResponses=Aby bylo mo\u017en\u00e9 pokra\u010dovat, je nutn\u00e9 odpov\u011bd\u011bt na n\u00e1sleduj\u00edc\u00ed ot\u00e1zky.
+# Display_RecoverRandomResponses=You must answer the following questions to continue.
+# Display_RecoverPasswordChoices=Your account has been locked due to excessive incorrect login attempts.  You may continue by unlocking your account or by changing your password.
+# Display_RecoverChoiceUnlock=Unlock your account.  If you remember your password, you can unlock your account by selecting this option.  Your password will not be changed.
+# Display_RecoverChoiceReset=Set a new password.  If you have forgotten your password and would like to set a new one, click here.  Your account will also be unlocked when you set a new password.
+# Display_RecoverEnterCode=To verify your identity, a security code has been sent to you at %1%.  Please enter the security code here.
 Display_NewUser=Nov\u00fd u\u017eivatelsk\u00fd \u00fa\u010det vytvo\u0159\u00edte vypln\u011bn\u00edm tohoto formul\u00e1\u0159e. Po vypln\u011bn\u00ed formul\u00e1\u0159e m\u016f\u017eete nastavit nov\u00e9 heslo a nastaven\u00ed bude dokon\u010deno. <p/> Dokon\u010dete proces, v\u00a0opa\u010dn\u00e9m p\u0159\u00edpad\u011b se m\u016f\u017ee st\u00e1t, \u017ee nov\u00fd u\u010det nebude mo\u017en\u00e9 pou\u017e\u00edt.
 Display_ActivateUser=Ov\u011b\u0159te svou identitu zad\u00e1n\u00edm n\u00e1sleduj\u00edc\u00edch informac\u00ed. Informace budou pou\u017eity k\u00a0nalezen\u00ed a aktivaci va\u0161eho u\u017eivatelsk\u00e9ho \u00fa\u010dtu.<p/>Dokon\u010dete tento proces, v\u00a0opa\u010dn\u00e9m p\u0159\u00edpad\u011b nebude \u00fa\u010det spr\u00e1vn\u011b aktivovat.
 Display_PleaseWaitBody=Heslo se aktualizuje. Tento proces m\u016f\u017ee trvat n\u011bkolik minut, bu\u010fte trp\u011bliv\u00ed.
 Display_ErrorBody=Do\u0161lo k\u00a0chyb\u011b. Zav\u0159ete prohl\u00ed\u017ee\u010d.  Pokud k\u00a0t\u00e9to chyb\u011b doch\u00e1z\u00ed opakovan\u011b, kontaktujte podporu.
 Display_UserEventHistory=Na t\u00e9to str\u00e1nce je zobrazena historie ud\u00e1lost\u00ed spojen\u00fdch s heslem. Zobrazeny jsou pouze akce proveden\u00e9 s\u00a0PWM. V\u0161echny \u010dasov\u00e9 \u00fadaje jsou uvedeny v\u00a0tomto \u010dasov\u00e9m p\u00e1smu: %1%
 Display_Logout=<b>Jste odhl\u00e1\u0161eni.</b><p/>P\u0159ed dal\u0161\u00edm p\u0159ihl\u00e1\u0161en\u00edm je nutn\u00e9 zav\u0159\u00edt okno prohl\u00ed\u017ee\u010de.
-Display_Login=Probl\u00e9my? Obra?te se pros\u00edm na Va\u0161i technickou podporu.
+# Display_PasswordWarn=Your password is about to expire.  Please change your password soon to avoid problems logging in.  Your password will expire on %1%.
+# Display_PasswordNoExpire=Your password does not expire.
 Display_IdleTimeout=\u010casov\u00fd limit ne\u010dinnosti:
 Display_Day=den
 Display_Days=dny
@@ -91,4 +137,27 @@ Display_Second=sekunda
 Display_Seconds=sekundy
 Display_UpdateAttributes=Pros\u00edm aktualizujte n\u00e1sleduj\u00edc\u00ed informace:
 Display_AutoGeneratedPassword=Automaticky vytvo\u0159en\u00e1 hesla
-Button_Logout=Odhl\u00e1sit
+# Display_ShowPasswordGuide=Password Guide
+# Display_Shortcuts=Select any of the following links to continue.
+# Display_CommunicationError=Unable to communicate with server.  Continue when ready.
+# Display_StrengthMeter=Password Strength
+# Display_Captcha=Please enter the verification code below.  Typing in this code helps to protect your account from abuse.  
+# Display_CapsLockIsOn=CAPS LOCK is on
+# Display_LeaveDirtyPasswordPage=If you leave this page, your password will not be changed.
+# Display_PasswordStrengthLow=Strength: <b>Weak</b>
+# Display_PasswordStrengthMedium=Strength: <b>Good</b>
+# Display_PasswordStrengthHigh=Strength: <b>Strong</b>
+# Display_IdleWarningTitle=Idle Timeout
+# Display_IdleWarningMessage=Your browser session is about to timeout.  Please click anywhere on this page to resume.
+# Display_PasswordGeneration=The following passwords have been randomly generated for you.  These passwords are based on real \
+#   words to make them easier to remember, but have been modified to make them difficult to guess.
+# Display_PasswordPrompt=Please type your new password
+# Display_ResponsesPrompt=Please type your security responses
+
+# Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your<br/> password. \
+#   Try the following to make your password stronger:\
+#   <ul><li>Make the password longer</li>\
+#   <li>Do not repeat letters or numbers</li>\
+#   <li>Use mixed (upper and lower) case letters</li>\
+#   <li>Add more numbers</li>\
+#   <li>Add more symbol characters</li></ul>
