--- a/pwm/servlet/src/password/pwm/config/Display_es.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_es.properties
@@ -26,12 +26,17 @@ Field_Location=Ubicaci\u00f3n
 Field_OldPassword=Clave antigua
 Field_NewPassword=Clave nueva
 Field_ConfirmPassword=Confirmar clave
+# Field_User_Supplied_Question=Question
+# Field_Option_Select=Select a question
+# Field_CurrentPassword=Current Password
 
 Button_Login=Conectar
 Button_Reset=Limpiar
 Button_ChangePassword=Cambiar clave
 Button_Hide=Ocultar
 Button_Show=Mostrar
+# Button_Hide_Responses=Hide Responses
+# Button_Show_Responses=Show Responses
 Button_SetResponses=Establecer pistas
 Button_Search=Buscar
 Button_RecoverPassword=Revisar pistas
@@ -39,9 +44,18 @@ Button_Create=Crear
 Button_Activate=Activar
 Button_Continue=Continuar
 Button_CloseWindow=Cerrar ventana
+# Button_Update=Update
+# Button_Verify=Verify
+# Button_UnlockPassword=Unlock Password
+# Button_ConfirmResponses=Confirm Responses
+# Button_ChangeResponses=Go Back
+# Button_CheckCode=CheckCode
+Button_Logout=Desconexi\u00f3n
+# Button_Agree=I Agree
 Button_Cancel=Cancelar
 Button_More=M\u00e1s informaci\u00f3n
 
+# Title_MainPage=Main Menu
 Title_Login=Por favor con\u00e9ctese
 Title_ChangePassword=Cambiar clave
 Title_SetupResponses=Establecer pistas de clave
@@ -58,27 +72,60 @@ Title_Error=Error
 Title_Success=Ejecutado
 Title_UserEventHistory=Historial de eventos de usuario
 Title_Logout=Desconexi\u00f3n
+Title_UpdateAttributes=Actualizar atributos
+# Title_PasswordStrength=Password Strength
+# Title_Shortcuts=Shortcuts
+# Title_PasswordWarning=Password Warning
+# Title_Captcha=Verification
+# Title_ConfirmResponses=Confirm Password Responses
+# Title_UserInformation=Account Information
+# Title_RandomPasswords=Random Passwords
+# Title_PasswordGuide=Password Guide
+# Title_ForgottenUsername=Forgotten Username
+# Title_Admin=Admin
 
+# Long_Title_Main_Menu=Password self-service main menu. From here you can change your current password, reset a forgotten password, or perform other related password activities.
+# Long_Title_ChangePassword=Change you current password.
+# Long_Title_ForgottenPassword=Recover your forgotten password.
+# Long_Title_SetupResponses=Setup your forgotten password responses. These secret questions will allow you to recover your password if you forget it.
+# Long_Title_ActivateUser=Activate a pre-configured account and establish a new password.
+# Long_Title_NewUser=Register a new user account.
+# Long_Title_UpdateAttributes=Update your user profile data.
+# Long_Title_UserEventHistory=Password event history.  See when you have changed your password in the past.
+# Long_Title_Shortcuts=Personalized shortcuts.
+# Long_Title_UserInformation=Information about your password and password policies.
+# Long_Title_Admin=PWM administrative functions
+# Long_Title_Logout=Logout of the PWM password self service application.
+# Long_Title_ForgottenUsername=Find your forgotten username.
+
+Display_Login=
 Display_PasswordExpired=Su clave ha caducado. Debe establecer una clave nueva ahora.
 Display_ChangePassword=Cambie su clave. Mantenga un registro seguro de su nueva clave. Despu\u00e9s de ingresar la nueva clave, haga clic en el bot\u00f3n Cambiar clave. Si tiene que escribirla, aseg\u00farese de mantenerla en un lugar seguro. Su nueva clave debe cumplir estos requerimientos:
 Display_CheckingPassword=Comprobando clave\u2026
+# Display_CheckingResponses=Checking Answers....
 Display_PleaseWait=Por favor espere\u2026
-Display_PasswordChangedTo=Los campos de clave se han cambiado a:
 Display_SetupResponses=En caso de que olvide su clave, puede recuperarla respondiendo a las preguntas que s\u00f3lo usted conoce.<p/>Elija sus preguntas y respuestas que podr\u00e1n utilizarse para verificar su identidad en caso de que olvide su clave.
+# Display_ConfirmResponses=Be sure your answers and questions are correct.  Check the spelling and punctuation.  In the event you forget your password, you will need to type in the exact answers to the questions below.
 Display_SetupRequiredResponses=Estas preguntas son requeridas por su administrador. En caso de que olvidara su clave, tendr\u00e1 que responder todas estas preguntas antes de poder reestablecer su clave.
 Display_SetupRandomResponses=En caso de que olvidara su clave, tendr\u00e1 que responder por lo menos %1% de estas preguntas para reestablecer su clave.
 Display_ForgottenPassword=Si ha olvidado su clave, siga las indicaciones para reestablecer su clave. Si no establecido sus pistas para clave con anterioridad, no podr\u00e1 completar este proceso.<p/>Para comenzar, ingrese su nombre de usuario.
+# Display_ForgottenUsername=Please type in the following information.  This information will be used to lookup your forgotten username.
 Display_RecoverPassword=Por favor responda las siguientes preguntas. Si lo hace de manera correcta, podr\u00e1 reestablecer su clave.
 Display_RecoverRequiredResponses=Estas preguntas son requeridas por su administrador.
 Display_RecoverRandomResponses=Debe responder las siguientes preguntas para continuar.
+# Display_RecoverRandomResponses=You must answer the following questions to continue.
+# Display_RecoverPasswordChoices=Your account has been locked due to excessive incorrect login attempts.  You may continue by unlocking your account or by changing your password.
+# Display_RecoverChoiceUnlock=Unlock your account.  If you remember your password, you can unlock your account by selecting this option.  Your password will not be changed.
+# Display_RecoverChoiceReset=Set a new password.  If you have forgotten your password and would like to set a new one, click here.  Your account will also be unlocked when you set a new password.
+# Display_RecoverEnterCode=To verify your identity, a security code has been sent to you at %1%.  Please enter the security code here.
 Display_NewUser=Complete este formulario para crear una nueva cuenta de usuario. Despu\u00e9s de completar este formulario, puede establecer una nueva clave y la creaci\u00f3n de su cuenta estar\u00e1 completa. <p/> Aseg\u00farese de completar el proceso; si no, su nueva cuenta no ser\u00e1 utilizable.
 Display_ActivateUser=Para confirmar su identidad, ingrese la siguiente informaci\u00f3n. Su informaci\u00f3n se utilizar\u00e1 para ubicar y activar su cuenta de usuario.<p/>Aseg\u00farese de completar el proceso; si no, su cuenta no se activar\u00e1 correctamente.
 Display_PleaseWaitBody=Se est\u00e1 actualizando su clave. Este proceso puede tomar varos minutos; tenga paciencia.
 Display_ErrorBody=Se produjo un error. Cierre su navegador. Si el error se repite, contactese con el servicio de soporte.
 Display_UserEventHistory=Esta p\u00e1gina muestra el historial de eventos de su clave. Ac\u00e1 s\u00f3lo se muestran las acciones realizadas con PWM. Todas las horas se\u00f1aladas corresponden a la zona horaria %1%.
 Display_Logout=<b>Usted se ha desconectado.</b><p/>Debe cerrar la ventana de su navegador antes de volver a conectarse.
-Title_UpdateAttributes=Actualizar atributos
-Display_Login=
+# Display_PasswordWarn=Your password is about to expire.  Please change your password soon to avoid problems logging in.  Your password will expire on %1%.
+# Display_PasswordNoExpire=Your password does not expire.
 Display_IdleTimeout=Intervalo de inactividad:
 Display_Day=d\u00eda
 Display_Days=d\u00edas
@@ -90,4 +137,27 @@ Display_Second=segundo
 Display_Seconds=segundos
 Display_UpdateAttributes=Por favor actualice la siguiente informaci\u00f3n:
 Display_AutoGeneratedPassword=Clave autogenerada
-Button_Logout=Desconexi\u00f3n
+# Display_ShowPasswordGuide=Password Guide
+# Display_Shortcuts=Select any of the following links to continue.
+# Display_CommunicationError=Unable to communicate with server.  Continue when ready.
+# Display_StrengthMeter=Password Strength
+# Display_Captcha=Please enter the verification code below.  Typing in this code helps to protect your account from abuse.  
+# Display_CapsLockIsOn=CAPS LOCK is on
+# Display_LeaveDirtyPasswordPage=If you leave this page, your password will not be changed.
+# Display_PasswordStrengthLow=Strength: <b>Weak</b>
+# Display_PasswordStrengthMedium=Strength: <b>Good</b>
+# Display_PasswordStrengthHigh=Strength: <b>Strong</b>
+# Display_IdleWarningTitle=Idle Timeout
+# Display_IdleWarningMessage=Your browser session is about to timeout.  Please click anywhere on this page to resume.
+# Display_PasswordGeneration=The following passwords have been randomly generated for you.  These passwords are based on real \
+#   words to make them easier to remember, but have been modified to make them difficult to guess.
+# Display_PasswordPrompt=Please type your new password
+# Display_ResponsesPrompt=Please type your security responses
+
+# Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your<br/> password. \
+#   Try the following to make your password stronger:\
+#   <ul><li>Make the password longer</li>\
+#   <li>Do not repeat letters or numbers</li>\
+#   <li>Use mixed (upper and lower) case letters</li>\
+#   <li>Add more numbers</li>\
+#   <li>Add more symbol characters</li></ul>
