--- a/pwm/servlet/src/password/pwm/config/Display_pl.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_pl.properties
@@ -26,12 +26,17 @@ Field_Location=Lokalizacja
 Field_OldPassword=Poprzednie has\u0142o
 Field_NewPassword=Nowe has\u0142o
 Field_ConfirmPassword=Potwierd\u017a has\u0142o
+# Field_User_Supplied_Question=Question
+# Field_Option_Select=Select a question
+# Field_CurrentPassword=Current Password
 
 Button_Login=Logowanie
 Button_Reset=Wyczy\u015b\u0107
 Button_ChangePassword=Zmie\u0144 has\u0142o
 Button_Hide=Ukryj
 Button_Show=Poka\u017c
+# Button_Hide_Responses=Hide Responses
+# Button_Show_Responses=Show Responses
 Button_SetResponses=Generuj podpowiedzi
 Button_Search=Szukaj
 Button_RecoverPassword=Sprawd\u017a podpowiedzi
@@ -40,7 +45,17 @@ Button_Activate=Aktywuj
 Button_Continue=Kontynuuj
 Button_CloseWindow=Zamknij okno
 Button_Update=Zmiana
+# Button_Verify=Verify
+# Button_UnlockPassword=Unlock Password
+# Button_ConfirmResponses=Confirm Responses
+# Button_ChangeResponses=Go Back
+# Button_CheckCode=CheckCode
+Button_Logout=Wyloguj
+# Button_Agree=I Agree
+# Button_Cancel=Cancel
+# Button_More=More
 
+# Title_MainPage=Main Menu
 Title_Login=Zaloguj si\u0119
 Title_ChangePassword=Zmie\u0144 has\u0142o
 Title_SetupResponses=Generuj podpowiedzi do has\u0142a
@@ -58,35 +73,91 @@ Title_Success=Operacja zako\u0144czona pomy\u015blnie
 Title_UserEventHistory=Historia zdarze\u0144 u\u017cytkownika
 Title_Logout=Wyloguj
 Title_UpdateAttributes=Zmiana atrybut\u00f3w
+# Title_PasswordStrength=Password Strength
+# Title_Shortcuts=Shortcuts
+# Title_PasswordWarning=Password Warning
+# Title_Captcha=Verification
+# Title_ConfirmResponses=Confirm Password Responses
+# Title_UserInformation=Account Information
+# Title_RandomPasswords=Random Passwords
+# Title_PasswordGuide=Password Guide
+# Title_ForgottenUsername=Forgotten Username
+# Title_Admin=Admin
+
+# Long_Title_Main_Menu=Password self-service main menu. From here you can change your current password, reset a forgotten password, or perform other related password activities.
+# Long_Title_ChangePassword=Change you current password.
+# Long_Title_ForgottenPassword=Recover your forgotten password.
+# Long_Title_SetupResponses=Setup your forgotten password responses. These secret questions will allow you to recover your password if you forget it.
+# Long_Title_ActivateUser=Activate a pre-configured account and establish a new password.
+# Long_Title_NewUser=Register a new user account.
+# Long_Title_UpdateAttributes=Update your user profile data.
+# Long_Title_UserEventHistory=Password event history.  See when you have changed your password in the past.
+# Long_Title_Shortcuts=Personalized shortcuts.
+# Long_Title_UserInformation=Information about your password and password policies.
+# Long_Title_Admin=PWM administrative functions
+# Long_Title_Logout=Logout of the PWM password self service application.
+# Long_Title_ForgottenUsername=Find your forgotten username.
 
 Display_Login=Problem? Skontaktuj si\u0119 z dzia\u0142em pomocy technicznej.
 Display_PasswordExpired=Twoje has\u0142o straci\u0142o wa\u017cno\u015b\u0107. Musisz wygenerowa\u0107 nowe has\u0142o.
 Display_ChangePassword=Zmie\u0144 has\u0142o i chro\u0144 je przed dost\u0119pem osob trzecich. Po wpisaniu nowego has\u0142a, kliknij przycisk Zmie\u0144 has\u0142o. Je\u015bli chcesz je zapisa\u0107, upewnij si\u0119, \u017ce b\u0119dzie ono  przechowywane w bezpiecznym miejscu. Nowe has\u0142o powinno spe\u0142nia\u0107 nast\u0119puj\u0105ce wymagania:
 Display_CheckingPassword=Trwa sprawdzanie has\u0142a....
+# Display_CheckingResponses=Checking Answers....
 Display_PleaseWait=Prosimy czeka\u0107...
-Display_PasswordChangedTo=Pola has\u0142a zosta\u0142y zmienione:
 Display_SetupResponses=Je\u015bli zapomnisz has\u0142a, mo\u017cesz je odzyska\u0107 przez podanie odpowiedzi na tylko Tobie znane pytania. <p/>Prosimy poda\u0107 te pytania i odpowiedzi, kt\u00f3re pos\u0142u\u017c\u0105 do weryfikacji u\u017cytkownika w przypadku utraty has\u0142a.
+# Display_ConfirmResponses=Be sure your answers and questions are correct.  Check the spelling and punctuation.  In the event you forget your password, you will need to type in the exact answers to the questions below.
 Display_SetupRequiredResponses=Pytania s\u0105 wymagane przez administratora. Je\u015bli zapomnisz has\u0142a, warunkiem jego odzyskania jest podanie odpowiedzi na wszystkie pytania.
 Display_SetupRandomResponses=Je\u015bli zapomnisz has\u0142a, warunkiem jego odzyskania jest podanie odpowiedzi na co najmniej %1% pyta\u0144.
 Display_ForgottenPassword=Je\u015bli zapomnia\u0142e\u015b has\u0142a, post\u0119puj zgodnie z okre\u015blonymi podpowiedziami w celu odzyskania has\u0142a. Je\u015bli nie ustali\u0142e\u015b wcze\u015bniej podpowiedzi, proces nie zostanie zako\u0144czony.<p/>Aby rozpocz\u0105\u0107, podaj nazw\u0119 u\u017cytkownika.
+# Display_ForgottenUsername=Please type in the following information.  This information will be used to lookup your forgotten username.
 Display_RecoverPassword=Odpowiedz na poni\u017csze pytania. Je\u015bli udzielisz poprawnych odpowiedzi, b\u0119dziesz m\u00f3g\u0142 odzyska\u0107 has\u0142o.
 Display_RecoverRequiredResponses=Pytania s\u0105 wymagane przez administratora.
 Display_RecoverRandomResponses=Aby kontynuowa\u0107, odpowiedz na poni\u017csze pytania.
+# Display_RecoverRandomResponses=You must answer the following questions to continue.
+# Display_RecoverPasswordChoices=Your account has been locked due to excessive incorrect login attempts.  You may continue by unlocking your account or by changing your password.
+# Display_RecoverChoiceUnlock=Unlock your account.  If you remember your password, you can unlock your account by selecting this option.  Your password will not be changed.
+# Display_RecoverChoiceReset=Set a new password.  If you have forgotten your password and would like to set a new one, click here.  Your account will also be unlocked when you set a new password.
+# Display_RecoverEnterCode=To verify your identity, a security code has been sent to you at %1%.  Please enter the security code here.
 Display_NewUser=Wype\u0142nij formularz, aby utworzy\u0107 nowe konto u\u017cytkownika. Po wype\u0142nieniu formularza, mo\u017cesz wygenerowa\u0107 nowe has\u0142o. Proces tworzenia profilu zostanie zako\u0144czony. <p/>Upewnij si\u0119, \u017ce proces zosta\u0142 zrealizowany w ca\u0142o\u015bci, w przeciwnym razie konto nie zostanie aktywowane.
 Display_ActivateUser=Aby potwierdzi\u0107 to\u017csamo\u015b\u0107 u\u017cytkownika, prosimy o podanie poni\u017cszych informacji, aby zlokalizowa\u0107 i aktywowa\u0107 konto u\u017cytkownika.<p/>Upewnij si\u0119, \u017ce proces zosta\u0142 zrealizowany w ca\u0142o\u015bci, w przeciwnym razie konto nie zostanie poprawnie aktywowane.
 Display_PleaseWaitBody=Twoje has\u0142o zosta\u0142o zaktualizowane. Proces mo\u017ce potrwa\u0107 kilka minut. Prosimy poczeka\u0107.
 Display_ErrorBody=Wyst\u0105pi\u0142 b\u0142\u0105d. Zamknij okno przegl\u0105darki. Je\u015bli b\u0142\u0105d wyst\u0105pi ponownie, prosimy o kontakt z dzia\u0142em pomocy technicznej.
 Display_UserEventHistory=Ta strona pokazuje historie zdarze\u0144 has\u0142a u\u017cytkownika. Pokazane s\u0105 jedynie zdarzenia z PWM. Wszystkie czasy s\u0105 podane w %1%.
 Display_Logout=<b>Wylogowa\u0142e\u015b si\u0119.</b><p/>Zamknij okno przegl\u0105darki przed zalogowaniem si\u0119 ponownie.
+# Display_PasswordWarn=Your password is about to expire.  Please change your password soon to avoid problems logging in.  Your password will expire on %1%.
+# Display_PasswordNoExpire=Your password does not expire.
+Display_IdleTimeout=Czas warunkowy:
 Display_Day=dzie\u0144
 Display_Days=dni
 Display_Hour=godzina
 Display_Hours=godziny
-Display_IdleTimeout=Czas warunkowy:
 Display_Minute=minuta
 Display_Minutes=minuty
 Display_Second=sekunda
 Display_Seconds=sekundy
 Display_UpdateAttributes=Zmie\u0144 poni\u017csze dane:
 Display_AutoGeneratedPassword=Has\u0142o generowane automatycznie
-Button_Logout=Wyloguj
+# Display_ShowPasswordGuide=Password Guide
+# Display_Shortcuts=Select any of the following links to continue.
+# Display_CommunicationError=Unable to communicate with server.  Continue when ready.
+# Display_StrengthMeter=Password Strength
+# Display_Captcha=Please enter the verification code below.  Typing in this code helps to protect your account from abuse.  
+# Display_CapsLockIsOn=CAPS LOCK is on
+# Display_LeaveDirtyPasswordPage=If you leave this page, your password will not be changed.
+# Display_PasswordStrengthLow=Strength: <b>Weak</b>
+# Display_PasswordStrengthMedium=Strength: <b>Good</b>
+# Display_PasswordStrengthHigh=Strength: <b>Strong</b>
+# Display_IdleWarningTitle=Idle Timeout
+# Display_IdleWarningMessage=Your browser session is about to timeout.  Please click anywhere on this page to resume.
+# Display_PasswordGeneration=The following passwords have been randomly generated for you.  These passwords are based on real \
+#   words to make them easier to remember, but have been modified to make them difficult to guess.
+# Display_PasswordPrompt=Please type your new password
+# Display_ResponsesPrompt=Please type your security responses
+
+# Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your<br/> password. \
+#   Try the following to make your password stronger:\
+#   <ul><li>Make the password longer</li>\
+#   <li>Do not repeat letters or numbers</li>\
+#   <li>Use mixed (upper and lower) case letters</li>\
+#   <li>Add more numbers</li>\
+#   <li>Add more symbol characters</li></ul>
