--- a/pwm/servlet/src/password/pwm/config/Message_pt.properties
+++ b/pwm/servlet/src/password/pwm/config/Message_pt.properties
@@ -58,7 +58,15 @@ Requirement_MinUnique=Deve incluir pelo menos %field% caractere individualizado.
 Requirement_MinUniquePlural=Deve incluir pelo menos %field% caracteres individualizados.
 Requirement_RequiredChars=Deve incluir pelo menos um de cada dos seguintes caracteres:
 Requirement_DisAllowedValues=N\u00e3o deve incluir qualquer dos seguintes valores:
+# Requirement_DisAllowedAttributes=Must not include part of your name or username.
 Requirement_WordList=N\u00e3o deve incluir uma palavra comum ou uma seq\u00fc\u00eancia de caracteres comumente utilizada.
+# Requirement_OldChar=Can not have more than %field% character from your current password.
+# Requirement_OldCharPlural=Can not have more than %field% characters from your current password.
+# Requirement_CaseSensitive=Password is case sensitive.
+# Requirement_NotCaseSensitive=Password is not case sensitive.
+# Requirement_MinimumFrequency=Can be changed no more often then once every %field%.
+# Requirement_ADComplexity=Must have at least three types of the following characters: <ul><li>Uppercase (A-Z)</li><li>Lowercase (a-z)</li><li>Number (0-9)</li><li>Symbol (!, #, $, etc.)</li></ul>
+# Requirement_UniqueRequired=New password may not have been used previously.
 
 Success_PasswordChange=A sua senha foi mudada com sucesso.
 Success_SetupResponse=A sua pergunta e resposta secretas foram configuradas com sucesso.
@@ -66,9 +74,14 @@ Success_Unknown=A opera\u00e7\u00e3o foi conclu\u00edda com sucesso.
 Success_CreateUser=A conta de usu\u00e1rio novo foi criada com sucesso. Certifique-se em continuar o processo, ou voc\u00ea n\u00e3o poder\u00e1 acessar a sua nova conta.
 Success_ActivateUser=A sua conta de usu\u00e1rio foi ativada com sucesso. Certifique-se em concluir o processo, ou n\u00e3o poder\u00e1 acessar a sua conta.
 Success_UpdateAttributes=As suas informa\u00e7\u00f5es de usu\u00e1rio foram atualizadas com sucesso.
+# Success_ResponsesMeetRules=Your responses meet the requirements.  Click Save Responses when ready.
+# Success_UnlockAccount=Your account has been unlocked.
+# Success_ForgottenUsername=Your username is %field%.  Please record your username for future use.
 
 EventLog_ChangePassword=Mudan\u00e7a de Senha
 EventLog_RecoverPassword=Recupera\u00e7\u00e3o de Senha Esquecida
 EventLog_SetupResponses=Configura\u00e7\u00e3o de Refer\u00eancias da Senha
 EventLog_ActivateUser=Ativar o Usu\u00e1rio
 EventLog_UpdateAttributes=Atualizar Atributos
+# EventLog_IntruderLockout=Intruder Lockout
+
