--- a/pwm/servlet/src/password/pwm/error/PwmError_cs.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError_cs.properties
@@ -20,6 +20,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
+# Password_MissingConfirm=Password meets requirements, please type confirmation password
 Password_DoesNotMatch=Hesla se neshoduj\u00ed
 Password_Missing=Chyb\u00ed heslo
 Password_PreviouslyUsed=Nov\u00e9 heslo ji\u017e bylo pou\u017eito
@@ -34,6 +35,7 @@ Password_NotEnoughLower=Nov\u00e9 heslo neobsahuje dostatek mal\u00fdch p\u00eds
 Password_NotEnoughSpecial=Nov\u00e9 heslo neobsahuje dostatek symbol\u016f (jin\u00fdch ne\u017e alfanumerick\u00fdch znak\u016f)
 Password_NotEnoughUnique=Nov\u00e9 heslo neobsahuje dostatek jedine\u010dn\u00fdch znak\u016f
 Password_TooManyRepeat=Nov\u00e9 heslo obsahuje p\u0159\u00edli\u0161 mnoho opakuj\u00edc\u00edch se znak\u016f
+# Password_TooManySpecial=New password has too many special (non letter or number) characters
 Password_TooManyAlpha=Nov\u00e9 heslo obsahuje p\u0159\u00edli\u0161 mnoho p\u00edsmen
 Password_TooManyNumeric=Nov\u00e9 heslo obsahuje p\u0159\u00edli\u0161 mnoho \u010d\u00edsel
 Password_TooManyLower=Nov\u00e9 heslo obsahuje p\u0159\u00edli\u0161 mnoho mal\u00fdch p\u00edsmen
@@ -49,12 +51,25 @@ Password_FirstIsNumeric=Prvn\u00ed znak nesm\u00ed b\u00fdt \u010d\u00edslo
 Password_LastIsNumeric=Posledn\u00ed znak nesm\u00ed b\u00fdt \u010d\u00edslo
 Password_FirstIsSpecial=Prvn\u00ed znak nesm\u00ed b\u00fdt symbol (jin\u00fd ne\u017e alfanumerick\u00fd znak)
 Password_LastIsSpecial=Posledn\u00ed znak nesm\u00ed b\u00fdt symbol (jin\u00fd ne\u017e alfanumerick\u00fd znak)
+# Password_HistoryFull=New password history is full
 Password_MeetsRules=Nov\u00e9 heslo spl\u0148uje po\u017eadavky
+# Password_TooSoon=Not enough time has passed since last password change
+# Password_UsingDisallowedValue=New password is using a value that is not allowed
+# Password_TooWeak=Password is too weak.  Try adding more numbers, symbols or mixed case letters.
+# Password_TooManyMonAlpha=New password has too many non-letter characters
+# Password_NotEnoughNonAlpha=New password does not have enough non-letter characters
+# Password_UnknownValidation=New password does not meet requirements.  Please try using a different password.
 
 Error_WrongAnswer=Odpov\u011b\u010f nen\u00ed spr\u00e1vn\u00e1
 Error_WrongPassword=U\u017eivatelsk\u00e9 jm\u00e9no nebo heslo nen\u00ed platn\u00e9
 Error_Response_WrongUsername=U\u017eivatelsk\u00e9 jm\u00e9no nen\u00ed platn\u00e9 nebo nem\u00e1 nakonfigurov\u00e1nu radu
 Error_Response_NoResponse=U\u017eivatelsk\u00e9 jm\u00e9no nen\u00ed platn\u00e9 nebo nem\u00e1 nakonfigurov\u00e1nu radu
+# Error_Response_TooShort=The response for question "%field%" is too short
+# Error_Response_Wordlist=The response for question "%field%" is too commonly used
+# Error_Response_TooLong=The response for question "%field%" is too long
+# Error_Response_Duplicate=The response for question "%field%" can not be the same as another response
+# Error_Challenge_Duplicate=Each question must be unique.
+# Error_Missing_Challenge_Text=Missing text for a user supplied question
 Error_UserAuthenticated=Ji\u017e jste ov\u011b\u0159eni
 Error_MissingParameter=Chyb\u00ed po\u017eadovan\u00fd parametr
 Error_DirectoryUnavailable=Adres\u00e1\u0159 nen\u00ed k dispozici
@@ -70,6 +85,22 @@ Error_UserIntruder=Byl p\u0159ekro\u010den maxim\u00e1ln\u00ed po\u010det pokus\
 Error_AddressIntruder=Byl p\u0159ekro\u010den maxim\u00e1ln\u00ed po\u010det pokus\u016f p\u0159ihl\u00e1\u0161en\u00ed pro adresu IP.  Opakujte akci pozd\u011bji.
 Error_SessionIntruder=Byl p\u0159ekro\u010den maxim\u00e1ln\u00ed po\u010det pokus\u016f p\u0159ihl\u00e1\u0161en\u00ed pro tuto relaci.
 Error_BadSessionPassword=Nelze nastavit heslo relace.
+# Error_Unauthorized=You do not have permission to perform the requested action.
+# Error_BadSession=Unable to establish a session with your browser.  Please close your browser and try again.
+# Error_MissingRequiredResponse=Please type all of the required responses.
+# Error_MissingRandomResponse=Please type an additional random response.
+# Error_BadCaptchaResponse=Incorrect verification code, please try again.
+# Error_CaptchaAPIError=An error occurred while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
+# Error_InvalidConfig=The PWM configuration is missing or invalid.  Check the error log.
+# Error_InvalidFormID=Your browser session is invalid or has expired.  Please close your browser and then try again.
+# Error_MissingNamingAttr=The naming attribute is missing, please contact your administrator.
+# Error_TokenMissingContact=There is no contact information available for your account.  Please contact your administrator. 
+# Error_TokenIncorrect=Incorrect code, please try again.
+# Error_BadCurrentPassword=Current password is incorrect, please try again.
+# Error_Closing=The operation can not complete because PWM is shutting down.
+# Error_Missing_GUID=Unable to locate a GUID for user.  Please contact your administrator.
+# Error_TokenExpired=The token you have entered is expired and is no longer valid.  Please try again.
+
 Error_FieldRequired=%field% je vy\u017eadov\u00e1no
 Error_FieldNotANumber=%field% mus\u013a b\u00fdt \u010d\u013aslo
 Error_FieldInvalidEmail=%field% nen\u013a platn\u00e1 e-mailov\u00e1 adresa
@@ -77,3 +108,12 @@ Error_FieldTooShort=%field% je p\u0159\u013ali\u0161 kr\u00e1tk\u00e9
 Error_FieldTooLong=%field% je p\u0159\u013ali\u0161 dlouh\u00e9
 Error_FieldDuplicate=%field% je ji\u017e pou\u017e\u013av\u00e1no
 Error_FieldBadConfirm=%field% pole se neshoduj\u013a
+
+# Error_ConfigUploadSuccess=File uploaded successfully
+# Error_ConfigUploadFailure=File failed to upload: %field%
+# Error_ConfigSaveSuccess=Configuration saved successfully.  PWM restart has been requested.  PWM may be unavailable while restarting.  If the restart request fails you may need to restart PWM manually.
+# Error_ConfigFormatError=Configuration format error: %field%
+# Error_ConfigLdapFailure=Unable to connect to LDAP directory server: %field%
+# Error_ConfigLdapSuccess=Successfully connected to LDAP directory server
+
+# Error_HTTP_404=The page you requested could not be found.
