--- a/pwm/servlet/src/password/pwm/error/PwmError_fr.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError_fr.properties
@@ -20,6 +20,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
+# Password_MissingConfirm=Password meets requirements, please type confirmation password
 Password_DoesNotMatch=Les mots de passe ne correspondent pas.
 Password_Missing=Mot de passe manquant
 Password_PreviouslyUsed=Le nouveau mot de passe a \u00e9t\u00e9 utilis\u00e9 pr\u00e9c\u00e9demment
@@ -34,6 +35,7 @@ Password_NotEnoughLower=Le nouveau mot de passe ne contient pas assez de lettres
 Password_NotEnoughSpecial=Le nouveau mot de passe ne contient pas assez de caract\u00e8res (non alphanum\u00e9riques)
 Password_NotEnoughUnique=Le nouveau mot de passe ne contient pas assez de caract\u00e8res uniques
 Password_TooManyRepeat=Le nouveau mot de passe contient trop de caract\u00e8res identiques
+Password_TooManySpecial=Le nouveau mot de passe a trop de caracères sp\u00e9ciaux
 Password_TooManyAlpha=Le nouveau mot de passe contient trop de lettres
 Password_TooManyNumeric=Le nouveau mot de passe contient trop de chiffres
 Password_TooManyLower=Le nouveau mot de passe contient trop de lettres minuscules
@@ -49,16 +51,25 @@ Password_FirstIsNumeric=Le premier caract\u00e8re ne doit pas \u00eatre num\u00e
 Password_LastIsNumeric=Le dernier caract\u00e8re ne doit pas \u00eatre num\u00e9rique
 Password_FirstIsSpecial=Le premier caract\u00e8re ne peut pas \u00eatre un symbole (non alphanum\u00e9rique)
 Password_LastIsSpecial=Le dernier caract\u00e8re ne peut pas \u00eatre un symbole (non alphanum\u00e9rique)
-Password_MeetsRules=Le nouveau mot de passe r\u00e9pond aux exigences de r\u00e8gles
-Password_TooManySpecial=Le nouveau mot de passe a trop de caracères sp\u00e9ciaux
 Password_HistoryFull=L\u2019historique des nouveaux mots de passes est plein
+Password_MeetsRules=Le nouveau mot de passe r\u00e9pond aux exigences de r\u00e8gles
 Password_TooSoon=Vous devez attendre avant de changer votre mot de passe
 Password_UsingDisallowedValue=Le nouveau mot de passe contient un mot interdit
+# Password_TooWeak=Password is too weak.  Try adding more numbers, symbols or mixed case letters.
+# Password_TooManyMonAlpha=New password has too many non-letter characters
+# Password_NotEnoughNonAlpha=New password does not have enough non-letter characters
+# Password_UnknownValidation=New password does not meet requirements.  Please try using a different password.
 
 Error_WrongAnswer=La r\u00e9ponse n\u2019est pas correcte
 Error_WrongPassword=Le nom d\u2019utilisateur ou le mot de passe n\u2019est pas valable
 Error_Response_WrongUsername=Le nom d\u2019utilisateur n\u2019est pas valable ou ne compte pas d\u2019indice configur\u00e9
 Error_Response_NoResponse=Le nom d\u2019utilisateur n\u2019est pas valable ou ne compte pas d\u2019indice configur\u00e9
+# Error_Response_TooShort=The response for question "%field%" is too short
+# Error_Response_Wordlist=The response for question "%field%" is too commonly used
+# Error_Response_TooLong=The response for question "%field%" is too long
+# Error_Response_Duplicate=The response for question "%field%" can not be the same as another response
+# Error_Challenge_Duplicate=Each question must be unique.
+# Error_Missing_Challenge_Text=Missing text for a user supplied question
 Error_UserAuthenticated=Vous avez d\u00e9j\u00e0 \u00e9t\u00e9 authentifi\u00e9
 Error_MissingParameter=Il manque un param\u00e8tre obligatoire
 Error_DirectoryUnavailable=R\u00e9pertoire\u00a0non disponible
@@ -74,6 +85,21 @@ Error_UserIntruder=Le nombre maximal de tentatives de connexion pour votre ident
 Error_AddressIntruder=Le nombre maximal de tentatives de connexion pour l\u2019adresse IP a \u00e9t\u00e9 atteint.  Veuillez r\u00e9essayer ult\u00e9rieurement.
 Error_SessionIntruder=Le nombre maximal de tentatives de connexion pour cette session a \u00e9t\u00e9 atteint.
 Error_BadSessionPassword=Impossible de cr\u00e9er un mot de passe de session.
+# Error_Unauthorized=You do not have permission to perform the requested action.
+# Error_BadSession=Unable to establish a session with your browser.  Please close your browser and try again.
+# Error_MissingRequiredResponse=Please type all of the required responses.
+# Error_MissingRandomResponse=Please type an additional random response.
+# Error_BadCaptchaResponse=Incorrect verification code, please try again.
+# Error_CaptchaAPIError=An error occurred while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
+# Error_InvalidConfig=The PWM configuration is missing or invalid.  Check the error log.
+# Error_InvalidFormID=Your browser session is invalid or has expired.  Please close your browser and then try again.
+# Error_MissingNamingAttr=The naming attribute is missing, please contact your administrator.
+# Error_TokenMissingContact=There is no contact information available for your account.  Please contact your administrator. 
+# Error_TokenIncorrect=Incorrect code, please try again.
+# Error_BadCurrentPassword=Current password is incorrect, please try again.
+# Error_Closing=The operation can not complete because PWM is shutting down.
+# Error_Missing_GUID=Unable to locate a GUID for user.  Please contact your administrator.
+# Error_TokenExpired=The token you have entered is expired and is no longer valid.  Please try again.
 
 Error_FieldRequired=%field% est obligatoire
 Error_FieldNotANumber=%field% doit \u00eatre un chiffre
@@ -82,3 +108,12 @@ Error_FieldTooShort=%field% est trop court
 Error_FieldTooLong=%field% est trop long
 Error_FieldDuplicate=%field% est d\u00e9j\u00e0 utilis\u00e9
 Error_FieldBadConfirm=%field% champs ne correspondent pas
+
+# Error_ConfigUploadSuccess=File uploaded successfully
+# Error_ConfigUploadFailure=File failed to upload: %field%
+# Error_ConfigSaveSuccess=Configuration saved successfully.  PWM restart has been requested.  PWM may be unavailable while restarting.  If the restart request fails you may need to restart PWM manually.
+# Error_ConfigFormatError=Configuration format error: %field%
+# Error_ConfigLdapFailure=Unable to connect to LDAP directory server: %field%
+# Error_ConfigLdapSuccess=Successfully connected to LDAP directory server
+
+# Error_HTTP_404=The page you requested could not be found.
