--- a/pwm/servlet/src/password/pwm/error/PwmError_it.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError_it.properties
@@ -20,6 +20,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
+# Password_MissingConfirm=Password meets requirements, please type confirmation password
 Password_DoesNotMatch=Le password non corrispondono
 Password_Missing=Password mancante
 Password_PreviouslyUsed=La nuova password \u00e8 gi\u00e0 stata usata
@@ -34,6 +35,7 @@ Password_NotEnoughLower=Le lettere minuscole nella nuova password non sono suffi
 Password_NotEnoughSpecial=I simboli (caratteri non alfanumerici) nella nuova password non sono sufficienti
 Password_NotEnoughUnique=I caratteri unici nella nuova password non sono sufficienti
 Password_TooManyRepeat=La nuova password contiene troppi caratteri che si ripetono
+# Password_TooManySpecial=New password has too many special (non letter or number) characters
 Password_TooManyAlpha=La nuova password contiene troppe lettere
 Password_TooManyNumeric=La nuova password contiene troppi numeri
 Password_TooManyLower=La nuova password contiene troppe lettere minuscole
@@ -49,12 +51,25 @@ Password_FirstIsNumeric=Il primo carattere deve essere numerico
 Password_LastIsNumeric=L'ultimo carattere deve essere numerico
 Password_FirstIsSpecial=Il primo carattere non deve essere un simbolo (carattere non alfanumerico)
 Password_LastIsSpecial=L'ultimo carattere non deve essere un simbolo (carattere non alfanumerico)
+# Password_HistoryFull=New password history is full
 Password_MeetsRules=La nuova password soddisfa i requisiti imposti dalle regole
+# Password_TooSoon=Not enough time has passed since last password change
+# Password_UsingDisallowedValue=New password is using a value that is not allowed
+# Password_TooWeak=Password is too weak.  Try adding more numbers, symbols or mixed case letters.
+# Password_TooManyMonAlpha=New password has too many non-letter characters
+# Password_NotEnoughNonAlpha=New password does not have enough non-letter characters
+# Password_UnknownValidation=New password does not meet requirements.  Please try using a different password.
 
 Error_WrongAnswer=La risposta non \u00e8 corretta
 Error_WrongPassword=Password o nome utente non valido
 Error_Response_WrongUsername=Il nome utente non \u00e8 valido e non \u00e8 stato configurato alcun suggerimento
 Error_Response_NoResponse=Il nome utente non \u00e8 valido e non \u00e8 stato configurato alcun suggerimento
+# Error_Response_TooShort=The response for question "%field%" is too short
+# Error_Response_Wordlist=The response for question "%field%" is too commonly used
+# Error_Response_TooLong=The response for question "%field%" is too long
+# Error_Response_Duplicate=The response for question "%field%" can not be the same as another response
+# Error_Challenge_Duplicate=Each question must be unique.
+# Error_Missing_Challenge_Text=Missing text for a user supplied question
 Error_UserAuthenticated=Questo utente \u00e8 gi\u00e0 stato autenticato
 Error_MissingParameter=Un parametro necessario \u00e8 mancante
 Error_DirectoryUnavailable=Directory non disponibile
@@ -70,6 +85,21 @@ Error_UserIntruder=\u00c8 stato superato il numero massimo di tentativi di apert
 Error_AddressIntruder=\u00c8 stato superato il numero massimo di tentativi per l'indirizzo IP.  Riprovare pi\u00f9 tardi.
 Error_SessionIntruder=\u00c8 stato superato il numero massimo di tentativi per questa sessione.
 Error_BadSessionPassword=Impossibile determinare la password della sessione.
+# Error_Unauthorized=You do not have permission to perform the requested action.
+# Error_BadSession=Unable to establish a session with your browser.  Please close your browser and try again.
+# Error_MissingRequiredResponse=Please type all of the required responses.
+# Error_MissingRandomResponse=Please type an additional random response.
+# Error_BadCaptchaResponse=Incorrect verification code, please try again.
+# Error_CaptchaAPIError=An error occurred while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
+# Error_InvalidConfig=The PWM configuration is missing or invalid.  Check the error log.
+# Error_InvalidFormID=Your browser session is invalid or has expired.  Please close your browser and then try again.
+# Error_MissingNamingAttr=The naming attribute is missing, please contact your administrator.
+# Error_TokenMissingContact=There is no contact information available for your account.  Please contact your administrator. 
+# Error_TokenIncorrect=Incorrect code, please try again.
+# Error_BadCurrentPassword=Current password is incorrect, please try again.
+# Error_Closing=The operation can not complete because PWM is shutting down.
+# Error_Missing_GUID=Unable to locate a GUID for user.  Please contact your administrator.
+# Error_TokenExpired=The token you have entered is expired and is no longer valid.  Please try again.
 
 Error_FieldRequired=%field% \u00e8 obbligatorio
 Error_FieldNotANumber=%field% deve essere un numero
@@ -78,3 +108,12 @@ Error_FieldTooShort=%field% \u00e8 troppo breve
 Error_FieldTooLong=%field% \u00e8 troppo lungo
 Error_FieldDuplicate=%field% \u00e8 gi\u00e0 in uso
 Error_FieldBadConfirm=I campi %field% non corrispondono
+
+# Error_ConfigUploadSuccess=File uploaded successfully
+# Error_ConfigUploadFailure=File failed to upload: %field%
+# Error_ConfigSaveSuccess=Configuration saved successfully.  PWM restart has been requested.  PWM may be unavailable while restarting.  If the restart request fails you may need to restart PWM manually.
+# Error_ConfigFormatError=Configuration format error: %field%
+# Error_ConfigLdapFailure=Unable to connect to LDAP directory server: %field%
+# Error_ConfigLdapSuccess=Successfully connected to LDAP directory server
+
+# Error_HTTP_404=The page you requested could not be found.
